增加二叉树的最近公共祖先

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -1544,11 +1544,25 @@ def isPowerOfFour(num):
 
 ### 47.1. 二叉树的最近公共祖先
 
-[Leetcode ][leetcode_]
+[Leetcode 236. Lowest Common Ancestor of a Binary Tree][leetcode_236]
+
+```java
+public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
+    if (root == null || root == p || root == q) {
+        return root;
+    }
+    TreeNode left = lowestCommonAncestor(root.left, p, q);
+    TreeNode right = lowestCommonAncestor(root.right, p, q);
+    if (left != null && right != null) {
+        return root;
+    }
+    return left == null ? right : left;
+}
+```
 
 ### 47.2. 二叉搜索树的最近公共祖先
 
-[Leetcode 231. Power of Two][leetcode_231]
+[Leetcode 235. Lowest Common Ancestor of a Binary Search Tree][leetcode_235]
 
 ```java
 public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
@@ -3022,3 +3036,7 @@ def gcd(a, b):
 [leetcode_331]: https://leetcode.com/problems/verify-preorder-serialization-of-a-binary-tree/#/description
 
 [aho_corasick_algorithm]: http://www.cppblog.com/mythit/archive/2009/04/21/80633.html
+
+[leetcode_235]: https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-search-tree/description/
+
+[leetcode_236]: https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/description/
