--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -14,15 +14,15 @@
 
 ## 1. 各种排序算法的性质
 
-|  算法种类  |     最好    |     平均    |     最坏    |   空间复杂度  | 是否稳定 |
-| :----: | :-------: | :-------: | :-------: | :------: | :--: |
-| 直接插入排序 |    O(n)   |   O(n^2)  |   O(n^2)  |   O(1)   |   是  |
-|  冒泡排序  |    O(n)   |   O(n^2)  |   O(n^2)  |   O(1)   |   是  |
-| 简单选择排序 |   O(n^2)  |   O(n^2)  |   O(n^2)  |   O(1)   |   否  |
-|  快速排序  |  O(nlogn) |  O(nlogn) |   O(n^2)  | O(nlogn) |   否  |
-|   堆排序  |  O(nlogn) |  O(nlogn) |  O(nlogn) |   O(1)   |   否  |
-| 二路归并排序 |  O(nlogn) |  O(nlogn) |  O(nlogn) |   O(n)   |   是  |
-|  基数排序  | O(d(n+r)) | O(d(n+r)) | O(d(n+r)) |   O(r)   |   是  |
+|  算法种类  |     最好    |     平均    |     最坏    |  空间复杂度  | 是否稳定 |
+| :----: | :-------: | :-------: | :-------: | :-----: | :--: |
+| 直接插入排序 |    O(n)   |   O(n^2)  |   O(n^2)  |   O(1)  |   是  |
+|  冒泡排序  |    O(n)   |   O(n^2)  |   O(n^2)  |   O(1)  |   是  |
+| 简单选择排序 |   O(n^2)  |   O(n^2)  |   O(n^2)  |   O(1)  |   否  |
+|  快速排序  |  O(nlogn) |  O(nlogn) |   O(n^2)  | O(logn) |   否  |
+|   堆排序  |  O(nlogn) |  O(nlogn) |  O(nlogn) |   O(1)  |   否  |
+| 二路归并排序 |  O(nlogn) |  O(nlogn) |  O(nlogn) |   O(n)  |   是  |
+|  基数排序  | O(d(n+r)) | O(d(n+r)) | O(d(n+r)) |   O(r)  |   是  |
 
 ## 2. 二叉搜索树、AVL树和红黑树的复杂度
 
