增加Java算法题模板

--- a/其他/其他.md
+++ b/其他/其他.md
@@ -9,6 +9,7 @@
 - [3. 方法中什么时候需要进行参数校验，什么时候不需要](#3-方法中什么时候需要进行参数校验什么时候不需要)
 - [4. 版本号命名方式](#4-版本号命名方式)
 - [5. 如何理解非对称加密](#5-如何理解非对称加密)
+- [6. Java算法题模板](#6-java算法题模板)
 
 <!-- /TOC -->
 
@@ -65,6 +66,24 @@
 用该用户的公钥加密后只能该用户的私钥才能解密。这种情况下，公钥是用来加密信息的，确保只有特定的人（用谁的公钥就是谁）才能解密该信息。
 
 还有第二种情况，公钥是用来解密信息的，确保让别人知道这条信息是真的由我发布的，是完整正确的。接收者由此可知这条信息确实来自于拥有私钥的某人，这被称作数字签名，公钥的形式就是数字证书。
+
+## 6. Java算法题模板
+
+```java
+import java.io.*;
+import java.util.*;
+import java.text.*;
+import java.math.*;
+import java.util.regex.*;
+
+public class Main {
+    public static void main(String[] args) {
+        Scanner scanner = new Scanner(System.in);
+        
+        System.out.println("result");
+    }
+}
+```
 
 [choose_a_license]: https://choosealicense.com/licenses/
 
