--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -59,73 +59,74 @@
 - [38. 把数组中所有0移动到尾部，数组元素保持相对顺序不变](#38-把数组中所有0移动到尾部数组元素保持相对顺序不变)
 - [39. 定义一次move是将长为n的数组中n-1个数均加1，最少多少个move可以使得数组中所有元素相等](#39-定义一次move是将长为n的数组中n-1个数均加1最少多少个move可以使得数组中所有元素相等)
 - [40. 找出长为n的数组中出现次数大于⌊ n/2 ⌋的元素](#40-找出长为n的数组中出现次数大于⌊-n2-⌋的元素)
-- [41. 十进制转换为7进制](#41-十进制转换为7进制)
-- [42. 指定长度二进制数，指定1的个数的所有可能情况](#42-指定长度二进制数指定1的个数的所有可能情况)
-- [43. 有序数组转二叉搜索树](#43-有序数组转二叉搜索树)
-- [44. 最大子数列问题](#44-最大子数列问题)
-  - [44.1. 最小值为0](#441-最小值为0)
-  - [44.2. 最小值为负数](#442-最小值为负数)
-- [45. 判断一个数是否为2的幂次](#45-判断一个数是否为2的幂次)
-- [46. 判断一个数是否为4的幂次](#46-判断一个数是否为4的幂次)
-- [47. 最近公共祖先问题](#47-最近公共祖先问题)
-  - [47.1. 二叉树的最近公共祖先](#471-二叉树的最近公共祖先)
-  - [47.2. 二叉搜索树的最近公共祖先](#472-二叉搜索树的最近公共祖先)
-- [48. 挑选数组中不连续的元素，使其和最大](#48-挑选数组中不连续的元素使其和最大)
-- [49. 镜像二叉树](#49-镜像二叉树)
-- [50. 判断二叉树是否平衡](#50-判断二叉树是否平衡)
-- [51. 二分法求平方根](#51-二分法求平方根)
-- [52. n!求末尾0的个数](#52-n求末尾0的个数)
-- [53. 有序数组去重](#53-有序数组去重)
-- [54. 链表判断环](#54-链表判断环)
-- [55. 判断是否为回文数](#55-判断是否为回文数)
-- [56. 是否存在二叉树根到叶子节点路径和为指定值](#56-是否存在二叉树根到叶子节点路径和为指定值)
-- [57. 找出字符串中所有变位词](#57-找出字符串中所有变位词)
-- [58. 判断两个字符串是否为同构字符串](#58-判断两个字符串是否为同构字符串)
-- [59. 判断一个数是否为其全部约数的和](#59-判断一个数是否为其全部约数的和)
-- [60. 打乱数组元素](#60-打乱数组元素)
-- [61. 生成不重复随机序列](#61-生成不重复随机序列)
-- [62. 使用随机生成0到5的函数，实现随机生成0到7的函数](#62-使用随机生成0到5的函数实现随机生成0到7的函数)
-- [63. 计算数组A、B、C、D中有多少种(i, j, k, l)使得A\[i\] + B\[j\] + C\[k\] + D\[l\] = 0](#63-计算数组abcd中有多少种i-j-k-l使得ai--bj--ck--dl--0)
-- [64. 计算给出的多个时间中，最小的时间差](#64-计算给出的多个时间中最小的时间差)
-- [65. 计算\[0, 10^n)中各位数字不同的数的个数](#65-计算\0-10^n中各位数字不同的数的个数)
-- [66. 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数](#66-数组中仅有两个数仅出现一次其余的数均出现两次找出这两个数)
-- [67. 找出递增数列中第n位的数字](#67-找出递增数列中第n位的数字)
-- [68. 计算小于n的质数的个数](#68-计算小于n的质数的个数)
-- [69. 由部分（可重复）给定数组元素相加得到指定值的情况数](#69-由部分可重复给定数组元素相加得到指定值的情况数)
-- [70. 在有序矩阵中寻找第k大的数](#70-在有序矩阵中寻找第k大的数)
-- [71. 求n对括号的所有排列情况](#71-求n对括号的所有排列情况)
-- [72. 给定字符串数组，求最大不相交的两个字符串的长度积](#72-给定字符串数组求最大不相交的两个字符串的长度积)
-- [73. 在由\[1, n\]组成的长为n + 1的数组中，寻找重复的那个数](#73-在由1-n组成的长为n--1的数组中寻找重复的那个数)
-- [74. 求给定数组的所有排列情况](#74-求给定数组的所有排列情况)
-- [75. 最长回文子序列](#75-最长回文子序列)
-- [76. 将\[1, n\]的数按字典排序](#76-将1-n的数按字典排序)
-- [77. 二叉搜索树迭代器](#77-二叉搜索树迭代器)
-- [78. 由\[1, n\]组成的二叉搜索树的个数](#78-由1-n组成的二叉搜索树的个数)
-- [79. 格雷码](#79-格雷码)
-- [80. 从m x n棋盘左上角走到右下角的路径总数](#80-从m-x-n棋盘左上角走到右下角的路径总数)
-- [81. 求循环移位的有序数组中的到最小值](#81-求循环移位的有序数组中的到最小值)
-- [82. 求集合的所有子集](#82-求集合的所有子集)
-- [83. 判断数组arr中是否存在arr\[i\] &lt; arr\[j\] &lt; arr\[k\]](#83-判断数组arr中是否存在arri-lt-arrj-lt-arrk)
-- [84. 查找数组中第k大的数](#84-查找数组中第k大的数)
-- [85. 链表删除倒数第n个结点](#85-链表删除倒数第n个结点)
-- [86. 判断数组是否可以拼接为正方形](#86-判断数组是否可以拼接为正方形)
-- [87. 快速`pow()`](#87-快速pow)
-- [88. 判断数组是否可以分为相等的两部分](#88-判断数组是否可以分为相等的两部分)
-- [89. 在矩阵中查找指定值](#89-在矩阵中查找指定值)
-- [90. 将矩阵顺时针旋转90度](#90-将矩阵顺时针旋转90度)
-- [91. 最长递增子序列](#91-最长递增子序列)
-- [92. 求二维矩阵由左上角到右下角的最小和](#92-求二维矩阵由左上角到右下角的最小和)
-- [93. 将由0、1、2组成的数组排序](#93-将由012组成的数组排序)
-- [94. 求第n位仅由指定因数组成的数字](#94-求第n位仅由指定因数组成的数字)
-- [95. 数组中查找极大值](#95-数组中查找极大值)
-- [96. 判断n能否由平方数的和组成](#96-判断n能否由平方数的和组成)
-- [97. 删除二叉搜索树中的结点](#97-删除二叉搜索树中的结点)
-- [98. 检查字符串是否是合法的二叉树前序遍历结果](#98-检查字符串是否是合法的二叉树前序遍历结果)
-- [99. 中缀表达式转后缀表达式](#99-中缀表达式转后缀表达式)
-- [100. 快速替换10亿条标题中的5万个敏感词](#100-快速替换10亿条标题中的5万个敏感词)
-- [101. 轮流取数的必胜策略](#101-轮流取数的必胜策略)
-- [102. 最大公约数（辗转相除法）](#102-最大公约数辗转相除法)
-- [103. 最小公倍数](#103-最小公倍数)
+- [41. 找出长为n的数组中出现次数大于⌊ n/k ⌋的元素](#41-找出长为n的数组中出现次数大于⌊-nk-⌋的元素)
+- [42. 十进制转换为7进制](#42-十进制转换为7进制)
+- [43. 指定长度二进制数，指定1的个数的所有可能情况](#43-指定长度二进制数指定1的个数的所有可能情况)
+- [44. 有序数组转二叉搜索树](#44-有序数组转二叉搜索树)
+- [45. 最大子数列问题](#45-最大子数列问题)
+  - [45.1. 最小值为0](#451-最小值为0)
+  - [45.2. 最小值为负数](#452-最小值为负数)
+- [46. 判断一个数是否为2的幂次](#46-判断一个数是否为2的幂次)
+- [47. 判断一个数是否为4的幂次](#47-判断一个数是否为4的幂次)
+- [48. 最近公共祖先问题](#48-最近公共祖先问题)
+  - [48.1. 二叉树的最近公共祖先](#481-二叉树的最近公共祖先)
+  - [48.2. 二叉搜索树的最近公共祖先](#482-二叉搜索树的最近公共祖先)
+- [49. 挑选数组中不连续的元素，使其和最大](#49-挑选数组中不连续的元素使其和最大)
+- [50. 镜像二叉树](#50-镜像二叉树)
+- [51. 判断二叉树是否平衡](#51-判断二叉树是否平衡)
+- [52. 二分法求平方根](#52-二分法求平方根)
+- [53. n!求末尾0的个数](#53-n求末尾0的个数)
+- [54. 有序数组去重](#54-有序数组去重)
+- [55. 链表判断环](#55-链表判断环)
+- [56. 判断是否为回文数](#56-判断是否为回文数)
+- [57. 是否存在二叉树根到叶子节点路径和为指定值](#57-是否存在二叉树根到叶子节点路径和为指定值)
+- [58. 找出字符串中所有变位词](#58-找出字符串中所有变位词)
+- [59. 判断两个字符串是否为同构字符串](#59-判断两个字符串是否为同构字符串)
+- [60. 判断一个数是否为其全部约数的和](#60-判断一个数是否为其全部约数的和)
+- [61. 打乱数组元素](#61-打乱数组元素)
+- [62. 生成不重复随机序列](#62-生成不重复随机序列)
+- [63. 使用随机生成0到5的函数，实现随机生成0到7的函数](#63-使用随机生成0到5的函数实现随机生成0到7的函数)
+- [64. 计算数组A、B、C、D中有多少种(i, j, k, l)使得A\[i\] + B\[j\] + C\[k\] + D\[l\] = 0](#64-计算数组abcd中有多少种i-j-k-l使得ai--bj--ck--dl--0)
+- [65. 计算给出的多个时间中，最小的时间差](#65-计算给出的多个时间中最小的时间差)
+- [66. 计算\[0, 10^n)中各位数字不同的数的个数](#66-计算\0-10^n中各位数字不同的数的个数)
+- [67. 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数](#67-数组中仅有两个数仅出现一次其余的数均出现两次找出这两个数)
+- [68. 找出递增数列中第n位的数字](#68-找出递增数列中第n位的数字)
+- [69. 计算小于n的质数的个数](#69-计算小于n的质数的个数)
+- [70. 由部分（可重复）给定数组元素相加得到指定值的情况数](#70-由部分可重复给定数组元素相加得到指定值的情况数)
+- [71. 在有序矩阵中寻找第k大的数](#71-在有序矩阵中寻找第k大的数)
+- [72. 求n对括号的所有排列情况](#72-求n对括号的所有排列情况)
+- [73. 给定字符串数组，求最大不相交的两个字符串的长度积](#73-给定字符串数组求最大不相交的两个字符串的长度积)
+- [74. 在由\[1, n\]组成的长为n + 1的数组中，寻找重复的那个数](#74-在由1-n组成的长为n--1的数组中寻找重复的那个数)
+- [75. 求给定数组的所有排列情况](#75-求给定数组的所有排列情况)
+- [76. 最长回文子序列](#76-最长回文子序列)
+- [77. 将\[1, n\]的数按字典排序](#77-将1-n的数按字典排序)
+- [78. 二叉搜索树迭代器](#78-二叉搜索树迭代器)
+- [79. 由\[1, n\]组成的二叉搜索树的个数](#79-由1-n组成的二叉搜索树的个数)
+- [80. 格雷码](#80-格雷码)
+- [81. 从m x n棋盘左上角走到右下角的路径总数](#81-从m-x-n棋盘左上角走到右下角的路径总数)
+- [82. 求循环移位的有序数组中的到最小值](#82-求循环移位的有序数组中的到最小值)
+- [83. 求集合的所有子集](#83-求集合的所有子集)
+- [84. 判断数组arr中是否存在arr\[i\] &lt; arr\[j\] &lt; arr\[k\]](#84-判断数组arr中是否存在arri-lt-arrj-lt-arrk)
+- [85. 查找数组中第k大的数](#85-查找数组中第k大的数)
+- [86. 链表删除倒数第n个结点](#86-链表删除倒数第n个结点)
+- [87. 判断数组是否可以拼接为正方形](#87-判断数组是否可以拼接为正方形)
+- [88. 快速`pow()`](#88-快速pow)
+- [89. 判断数组是否可以分为相等的两部分](#89-判断数组是否可以分为相等的两部分)
+- [90. 在矩阵中查找指定值](#90-在矩阵中查找指定值)
+- [91. 将矩阵顺时针旋转90度](#91-将矩阵顺时针旋转90度)
+- [92. 最长递增子序列](#92-最长递增子序列)
+- [93. 求二维矩阵由左上角到右下角的最小和](#93-求二维矩阵由左上角到右下角的最小和)
+- [94. 将由0、1、2组成的数组排序](#94-将由012组成的数组排序)
+- [95. 求第n位仅由指定因数组成的数字](#95-求第n位仅由指定因数组成的数字)
+- [96. 数组中查找极大值](#96-数组中查找极大值)
+- [97. 判断n能否由平方数的和组成](#97-判断n能否由平方数的和组成)
+- [98. 删除二叉搜索树中的结点](#98-删除二叉搜索树中的结点)
+- [99. 检查字符串是否是合法的二叉树前序遍历结果](#99-检查字符串是否是合法的二叉树前序遍历结果)
+- [100. 中缀表达式转后缀表达式](#100-中缀表达式转后缀表达式)
+- [101. 快速替换10亿条标题中的5万个敏感词](#101-快速替换10亿条标题中的5万个敏感词)
+- [102. 轮流取数的必胜策略](#102-轮流取数的必胜策略)
+- [103. 最大公约数（辗转相除法）](#103-最大公约数辗转相除法)
+- [104. 最小公倍数](#104-最小公倍数)
 
 <!-- /TOC -->
 
@@ -1419,7 +1420,36 @@ def majorityElement(nums):
     return majority
 ```
 
-## 41. 十进制转换为7进制
+## 41. 找出长为n的数组中出现次数大于⌊ n/k ⌋的元素
+
+```python
+def majority_element(nums, k):
+    counters = {}
+    for num in nums:
+        if num in counters:
+            counters[num] += 1
+        elif len(counters.keys()) < k - 1:
+            counters[num] = 1
+        else:
+            for key, count in counters.items():
+                if count == 1:
+                    del counters[key]
+                else:
+                    counters[key] -= 1
+    for num in counters.keys():
+        counters[num] = 0
+    for num in nums:
+        if num in counters:
+            counters[num] += 1
+    target = len(nums) // k
+    result = []
+    for num, count in counters.items():
+        if count > target:
+            result.append(num)
+    return result
+```
+
+## 42. 十进制转换为7进制
 
 [Leetcode 504. Base 7][leetcode_504]
 
@@ -1442,7 +1472,7 @@ public String convertToBase7(int num) {
 }
 ```
 
-## 42. 指定长度二进制数，指定1的个数的所有可能情况
+## 43. 指定长度二进制数，指定1的个数的所有可能情况
 
 [Leetcode 401. Binary Watch][leetcode_401]
 
@@ -1462,7 +1492,7 @@ def get_combination(length, num_ones):
     return result
 ```
 
-## 43. 有序数组转二叉搜索树
+## 44. 有序数组转二叉搜索树
 
 [Leetcode 108. Convert Sorted Array to Binary Search Tree][leetcode_108]
 
@@ -1486,11 +1516,11 @@ public TreeNode sortedArrayToBST(int[] nums) {
 }
 ```
 
-## 44. 最大子数列问题
+## 45. 最大子数列问题
 
 [Leetcode 121. Best Time to Buy and Sell Stock][leetcode_121]
 
-### 44.1. 最小值为0
+### 45.1. 最小值为0
 
 ```python
 def max_subarray(nums):
@@ -1502,7 +1532,7 @@ def max_subarray(nums):
     return max_so_far
 ```
 
-### 44.2. 最小值为负数
+### 45.2. 最小值为负数
 
 ```python
 def max_subarray(nums):
@@ -1514,7 +1544,7 @@ def max_subarray(nums):
     return max_so_far
 ```
 
-## 45. 判断一个数是否为2的幂次
+## 46. 判断一个数是否为2的幂次
 
 [Leetcode 231. Power of Two][leetcode_231]
 
@@ -1527,7 +1557,7 @@ def isPowerOfTwo(n):
     return n > 0 and 0x80000000 % n == 0
 ```
 
-## 46. 判断一个数是否为4的幂次
+## 47. 判断一个数是否为4的幂次
 
 [Leetcode 342. Power of Four][leetcode_342]
 
@@ -1540,9 +1570,9 @@ def isPowerOfFour(num):
     return num > 0 and num & (num - 1) == 0 and num & 0x55555555 == num
 ```
 
-## 47. 最近公共祖先问题
+## 48. 最近公共祖先问题
 
-### 47.1. 二叉树的最近公共祖先
+### 48.1. 二叉树的最近公共祖先
 
 [Leetcode 236. Lowest Common Ancestor of a Binary Tree][leetcode_236]
 
@@ -1560,7 +1590,7 @@ public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
 }
 ```
 
-### 47.2. 二叉搜索树的最近公共祖先
+### 48.2. 二叉搜索树的最近公共祖先
 
 [Leetcode 235. Lowest Common Ancestor of a Binary Search Tree][leetcode_235]
 
@@ -1583,7 +1613,7 @@ public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
 }
 ```
 
-## 48. 挑选数组中不连续的元素，使其和最大
+## 49. 挑选数组中不连续的元素，使其和最大
 
 [Leetcode 198. House Robber][leetcode_198]
 
@@ -1602,7 +1632,7 @@ public int rob(int[] nums) {
 }
 ```
 
-## 49. 镜像二叉树
+## 50. 镜像二叉树
 
 [Leetcode 101. Symmetric Tree][leetcode_101]
 
@@ -1625,7 +1655,7 @@ def isSymmetric(root):
     return symmetric(root.left, root.right)
 ```
 
-## 50. 判断二叉树是否平衡
+## 51. 判断二叉树是否平衡
 
 [Leetcode 110. Balanced Binary Tree][leetcode_110]
 
@@ -1648,7 +1678,7 @@ def isBalanced(root):
     return balanced(root) != -1
 ```
 
-## 51. 二分法求平方根
+## 52. 二分法求平方根
 
 [Leetcode 367. Valid Perfect Square][leetcode_367]
 
@@ -1671,7 +1701,7 @@ public int mySqrt(int x) {
 }
 ```
 
-## 52. n!求末尾0的个数
+## 53. n!求末尾0的个数
 
 [Leetcode 172. Factorial Trailing Zeroes][leetcode_172]
 
@@ -1687,7 +1717,7 @@ public int trailingZeroes(int n) {
 }
 ```
 
-## 53. 有序数组去重
+## 54. 有序数组去重
 
 [Leetcode 26. Remove Duplicates from Sorted Array][leetcode_26]
 
@@ -1714,7 +1744,7 @@ def removeDuplicates(nums):
     return i if len(nums) == 0 else i + 1
 ```
 
-## 54. 链表判断环
+## 55. 链表判断环
 
 [Leetcode 141. Linked List Cycle][leetcode_141]
 
@@ -1736,7 +1766,7 @@ def hasCycle(head):
     return False
 ```
 
-## 55. 判断是否为回文数
+## 56. 判断是否为回文数
 
 [Leetcode 9. Palindrome Number][leetcode_9]
 
@@ -1757,7 +1787,7 @@ public boolean isPalindrome(int x) {
 }
 ```
 
-## 56. 是否存在二叉树根到叶子节点路径和为指定值
+## 57. 是否存在二叉树根到叶子节点路径和为指定值
 
 [Leetcode 112. Path Sum][leetcode_112]
 
@@ -1776,7 +1806,7 @@ def hasPathSum(root, sum):
     return hasPathSum(root.left, sum - root.val) or hasPathSum(root.right, sum - root.val)
 ```
 
-## 57. 找出字符串中所有变位词
+## 58. 找出字符串中所有变位词
 
 [Leetcode 438. Find All Anagrams in a String][leetcode_438]
 
@@ -1810,7 +1840,7 @@ public List<Integer> findAnagrams(String s, String p) {
 }
 ```
 
-## 58. 判断两个字符串是否为同构字符串
+## 59. 判断两个字符串是否为同构字符串
 
 [Leetcode 205. Isomorphic Strings][leetcode_205]
 
@@ -1839,7 +1869,7 @@ public boolean isIsomorphic(String s, String t) {
 }
 ```
 
-## 59. 判断一个数是否为其全部约数的和
+## 60. 判断一个数是否为其全部约数的和
 
 [Leetcode 507. Perfect Number][leetcode_507]
 
@@ -1862,7 +1892,7 @@ def checkPerfectNumber(num):
     return result == num
 ```
 
-## 60. 打乱数组元素
+## 61. 打乱数组元素
 
 [Leetcode 384. Shuffle an Array][leetcode_384]
 
@@ -1880,7 +1910,7 @@ public void shuffle(int[] nums) {
 }
 ```
 
-## 61. 生成不重复随机序列
+## 62. 生成不重复随机序列
 
 ```java
 Random random = new Random();
@@ -1902,7 +1932,7 @@ public int[] randomSequence(int n) {
 }
 ```
 
-## 62. 使用随机生成0到5的函数，实现随机生成0到7的函数
+## 63. 使用随机生成0到5的函数，实现随机生成0到7的函数
 
 ```java
 Random random = new Random();
@@ -1922,7 +1952,7 @@ int random7(){
 }
 ```
 
-## 63. 计算数组A、B、C、D中有多少种(i, j, k, l)使得A[i] + B[j] + C[k] + D[l] = 0
+## 64. 计算数组A、B、C、D中有多少种(i, j, k, l)使得A[i] + B[j] + C[k] + D[l] = 0
 
 [Leetcode 454. 4Sum II][leetcode_454]
 
@@ -1951,7 +1981,7 @@ def fourSumCount(A, B, C, D):
     return result
 ```
 
-## 64. 计算给出的多个时间中，最小的时间差
+## 65. 计算给出的多个时间中，最小的时间差
 
 [Leetcode 539. Minimum Time Difference][leetcode_539]
 
@@ -1982,7 +2012,7 @@ public int findMinDifference(List<String> timePoints) {
 }
 ```
 
-## 65. 计算\[0, 10^n)中各位数字不同的数的个数
+## 66. 计算\[0, 10^n)中各位数字不同的数的个数
 
 [Leetcode 357. Count Numbers with Unique Digits][leetcode_357]
 
@@ -2004,7 +2034,7 @@ def countNumbersWithUniqueDigits(n):
     return map[n]
 ```
 
-## 66. 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数
+## 67. 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数
 
 [Leetcode 260. Single Number III][leetcode_260]
 
@@ -2028,7 +2058,7 @@ def singleNumber(nums):
     return [first, second]
 ```
 
-## 67. 找出递增数列中第n位的数字
+## 68. 找出递增数列中第n位的数字
 
 [Leetcode 400. Nth Digit][leetcode_400]
 
@@ -2051,7 +2081,7 @@ def findNthDigit(n):
     return int(str(number)[n % digits])
 ```
 
-## 68. 计算小于n的质数的个数
+## 69. 计算小于n的质数的个数
 
 [Leetcode 204. Count Primes][leetcode_204]
 
@@ -2073,7 +2103,7 @@ def countPrimes(n):
     return sum(primes)
 ```
 
-## 69. 由部分（可重复）给定数组元素相加得到指定值的情况数
+## 70. 由部分（可重复）给定数组元素相加得到指定值的情况数
 
 [Leetcode 377. Combination Sum IV][leetcode_377]
 
@@ -2092,7 +2122,7 @@ public int combinationSum4(int[] nums, int target) {
 }
 ```
 
-## 70. 在有序矩阵中寻找第k大的数
+## 71. 在有序矩阵中寻找第k大的数
 
 [Leetcode 378. Kth Smallest Element in a Sorted Matrix][leetcode_378]
 
@@ -2134,7 +2164,7 @@ public int kthSmallest(int[][] matrix, int k) {
 }
 ```
 
-## 71. 求n对括号的所有排列情况
+## 72. 求n对括号的所有排列情况
 
 [Leetcode 22. Generate Parentheses][leetcode_22]
 
@@ -2157,7 +2187,7 @@ def generateParenthesis(n):
     return result
 ```
 
-## 72. 给定字符串数组，求最大不相交的两个字符串的长度积
+## 73. 给定字符串数组，求最大不相交的两个字符串的长度积
 
 [Leetcode 318. Maximum Product of Word Lengths][leetcode_318]
 
@@ -2183,7 +2213,7 @@ public int maxProduct(String[] words) {
 }
 ```
 
-## 73. 在由[1, n]组成的长为n + 1的数组中，寻找重复的那个数
+## 74. 在由[1, n]组成的长为n + 1的数组中，寻找重复的那个数
 
 [Leetcode 287. Find the Duplicate Number][leetcode_287]
 
@@ -2209,7 +2239,7 @@ public int findDuplicate(int[] nums) {
 }
 ```
 
-## 74. 求给定数组的所有排列情况
+## 75. 求给定数组的所有排列情况
 
 [Leetcode 46. Permutations][leetcode_46]
 
@@ -2232,7 +2262,7 @@ public List<List<Integer>> permute(int[] nums) {
 }
 ```
 
-## 75. 最长回文子序列
+## 76. 最长回文子序列
 
 [Leetcode 516. Longest Palindromic Subsequence][leetcode_516]
 
@@ -2253,7 +2283,7 @@ public int longestPalindromeSubseq(String s) {
 }
 ```
 
-## 76. 将[1, n]的数按字典排序
+## 77. 将[1, n]的数按字典排序
 
 [Leetcode 386. Lexicographical Numbers][leetcode_386]
 
@@ -2280,7 +2310,7 @@ def lexicalOrder(n):
     return result
 ```
 
-## 77. 二叉搜索树迭代器
+## 78. 二叉搜索树迭代器
 
 [Leetcode 173. Binary Search Tree Iterator][leetcode_173]
 
@@ -2314,7 +2344,7 @@ class BSTIterator(object):
         return result
 ```
 
-## 78. 由[1, n]组成的二叉搜索树的个数
+## 79. 由[1, n]组成的二叉搜索树的个数
 
 [Leetcode 96. Unique Binary Search Trees][leetcode_96]
 
@@ -2331,7 +2361,7 @@ public int numTrees(int n) {
 }
 ```
 
-## 79. 格雷码
+## 80. 格雷码
 
 [Leetcode 89. Gray Code][leetcode_89]
 
@@ -2344,7 +2374,7 @@ def grayCode(n):
     return [i ^ (i >> 1) for i in range(1 << n)]
 ```
 
-## 80. 从m x n棋盘左上角走到右下角的路径总数
+## 81. 从m x n棋盘左上角走到右下角的路径总数
 
 [Leetcode 62. Unique Paths][leetcode_62]
 
@@ -2366,7 +2396,7 @@ public int uniquePaths(int m, int n) {
 }
 ```
 
-## 81. 求循环移位的有序数组中的到最小值
+## 82. 求循环移位的有序数组中的到最小值
 
 [Leetcode 153. Find Minimum in Rotated Sorted Array][leetcode_153]
 
@@ -2389,7 +2419,7 @@ public int findMin(int[] nums) {
 }
 ```
 
-## 82. 求集合的所有子集
+## 83. 求集合的所有子集
 
 [Leetcode 78. Subsets][leetcode_78]
 
@@ -2409,7 +2439,7 @@ def subsets(nums):
     return result
 ```
 
-## 83. 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]
+## 84. 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]
 
 [Leetcode 334. Increasing Triplet Subsequence][leetcode_334]
 
@@ -2430,7 +2460,7 @@ public boolean increasingTriplet(int[] nums) {
 }
 ```
 
-## 84. 查找数组中第k大的数
+## 85. 查找数组中第k大的数
 
 [Leetcode 215. Kth Largest Element in an Array][leetcode_215]
 
@@ -2460,7 +2490,7 @@ def findKthLargest(nums, k):
     return kth_largest(nums, 0, len(nums) - 1, len(nums) - k)
 ```
 
-## 85. 链表删除倒数第n个结点
+## 86. 链表删除倒数第n个结点
 
 [Leetcode 19. Remove Nth Node From End of List][leetcode_19]
 
@@ -2487,7 +2517,7 @@ def removeNthFromEnd(head, n):
     return head
 ```
 
-## 86. 判断数组是否可以拼接为正方形
+## 87. 判断数组是否可以拼接为正方形
 
 [Leetcode 473. Matchsticks to Square][leetcode_473]
 
@@ -2534,7 +2564,7 @@ public boolean makesquare(int[] nums) {
 }
 ```
 
-## 87. 快速`pow()`
+## 88. 快速`pow()`
 
 [Leetcode 372. Super Pow][leetcode_372]
 
@@ -2560,7 +2590,7 @@ public int superPow(int a, int[] b) {
     return result;
 ```
 
-## 88. 判断数组是否可以分为相等的两部分
+## 89. 判断数组是否可以分为相等的两部分
 
 [Leetcode 416. Partition Equal Subset Sum][leetcode_416]
 
@@ -2588,7 +2618,7 @@ public boolean canPartition(int[] nums) {
 }
 ```
 
-## 89. 在矩阵中查找指定值
+## 90. 在矩阵中查找指定值
 
 [Leetcode 240. Search a 2D Matrix II][leetcode_240]
 
@@ -2614,7 +2644,7 @@ def searchMatrix(matrix, target):
     return False
 ```
 
-## 90. 将矩阵顺时针旋转90度
+## 91. 将矩阵顺时针旋转90度
 
 [Leetcode 48. Rotate Image][leetcode_48]
 
@@ -2633,7 +2663,7 @@ def rotate(matrix):
             matrix[i][j], matrix[j][i] = matrix[j][i], matrix[i][j]
 ```
 
-## 91. 最长递增子序列
+## 92. 最长递增子序列
 
 [Leetcode 300. Longest Increasing Subsequence][leetcode_300]
 
@@ -2654,7 +2684,7 @@ def lengthOfLIS(nums):
     return max(dp)
 ```
 
-## 92. 求二维矩阵由左上角到右下角的最小和
+## 93. 求二维矩阵由左上角到右下角的最小和
 
 [Leetcode 64. Minimum Path Sum][leetcode_64]
 
@@ -2679,7 +2709,7 @@ public int minPathSum(int[][] grid) {
 }
 ```
 
-## 93. 将由0、1、2组成的数组排序
+## 94. 将由0、1、2组成的数组排序
 
 [Leetcode 75. Sort Colors][leetcode_75]
 
@@ -2713,7 +2743,7 @@ def sortColors(nums):
             current += 1
 ```
 
-## 94. 求第n位仅由指定因数组成的数字
+## 95. 求第n位仅由指定因数组成的数字
 
 [Leetcode 313. Super Ugly Number][leetcode_313]
 
@@ -2741,7 +2771,7 @@ public int nthSuperUglyNumber(int n, int[] primes) {
 }
 ```
 
-## 95. 数组中查找极大值
+## 96. 数组中查找极大值
 
 [Leetcode 162. Find Peak Elementr][leetcode_162]
 
@@ -2767,7 +2797,7 @@ public int findPeakElement(int[] nums) {
 }
 ```
 
-## 96. 判断n能否由平方数的和组成
+## 97. 判断n能否由平方数的和组成
 
 [Leetcode 279. Perfect Squares][leetcode_279]
 
@@ -2787,7 +2817,7 @@ def numSquares(self, n):
     return dp[n]
 ```
 
-## 97. 删除二叉搜索树中的结点
+## 98. 删除二叉搜索树中的结点
 
 [Leetcode 450. Delete Node in a BST][leetcode_450]
 
@@ -2818,7 +2848,7 @@ def deleteNode(root, key):
     return root
 ```
 
-## 98. 检查字符串是否是合法的二叉树前序遍历结果
+## 99. 检查字符串是否是合法的二叉树前序遍历结果
 
 [Leetcode 331. Verify Preorder Serialization of a Binary Tree][leetcode_331]
 
@@ -2838,7 +2868,7 @@ def isValidSerialization(self, preorder):
     return degree == 0
 ```
 
-## 99. 中缀表达式转后缀表达式
+## 100. 中缀表达式转后缀表达式
 
 ```java
 String infixToPostfix(String infix) {
@@ -2880,7 +2910,7 @@ String infixToPostfix(String infix) {
 }
 ```
 
-## 100. 快速替换10亿条标题中的5万个敏感词
+## 101. 快速替换10亿条标题中的5万个敏感词
 
 Aho-Corasick算法（AC自动机）：
 
@@ -2890,13 +2920,13 @@ Aho-Corasick算法（AC自动机）：
 
 参考：[AC自动机算法详解 - 极限定律 - C++博客][aho_corasick_algorithm]
 
-## 101. 轮流取数的必胜策略
+## 102. 轮流取数的必胜策略
 
 问题描述：有2N个自然数，甲乙两人轮流取。一人一次取一个，而且只能取头尾两个数中的一个，取过的数划去，直到2N个数取完，取得的数的总和大的人获胜。那么，先取的人是否有必胜策略？
 
 解决方法：先取的人只要取了奇数位上的数，就把偶数位的数留给后取的人，而且只要坚持取奇数位上的数，就一直会把偶数位上的数留给后取的人。这样就会取走所有奇数位上的数。（这种方法同样可使先取的人把所有偶数位上的数取走）所以，先取的人只要一开始算出是所有偶数位上的数总和大，还是所有奇数位上的数总和大，就一定会胜。
 
-## 102. 最大公约数（辗转相除法）
+## 103. 最大公约数（辗转相除法）
 
 ```python
 def gcd(a, b):
@@ -2905,7 +2935,7 @@ def gcd(a, b):
     return a
 ```
 
-## 103. 最小公倍数
+## 104. 最小公倍数
 
 `(a * b)/gcd(a, b)`
 
