更新查找数组中第k大的数

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -2465,29 +2465,32 @@ public boolean increasingTriplet(int[] nums) {
 [Leetcode 215. Kth Largest Element in an Array][leetcode_215]
 
 ```python
-def findKthLargest(nums, k):
-    """
-    :type nums: List[int]
-    :type k: int
-    :rtype: int
-    """
+def find_kth_largest(nums, k):
+    def partition(array, low, high):
+        pivot = array[low]
+        while low < high:
+            while low < high and array[high] >= pivot:
+                high -= 1
+            array[low] = array[high]
+            while low < high and array[low] <= pivot:
+                low += 1
+            array[high] = array[low]
+        array[low] = pivot
+        return low
 
-    def kth_largest(nums, start, end, k):
-        pivot = nums[end]
-        left = start
-        for i in range(start, end):
-            if nums[i] <= pivot:
-                nums[left], nums[i] = nums[i], nums[left]
-                left += 1
-        nums[left], nums[end] = nums[end], nums[left]
-        if left == k:
-            return nums[left]
-        elif left < k:
-            return kth_largest(nums, left + 1, end, k)
+    random.shuffle(nums)
+    k = len(nums) - k
+    low = 0
+    high = len(nums) - 1
+    while low < high:
+        index = partition(nums, low, high)
+        if index < k:
+            low = index + 1
+        elif index > k:
+            high = index - 1
         else:
-            return kth_largest(nums, start, left - 1, k)
-
-    return kth_largest(nums, 0, len(nums) - 1, len(nums) - k)
+            break
+    return nums[k]
 ```
 
 ## 86. 链表删除倒数第n个结点
