增加合并两个链表

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -22,6 +22,8 @@
   - [3.1. 反转链表（头插法）](#31-反转链表头插法)
   - [3.2. 单链表去重](#32-单链表去重)
   - [3.3. 合并两个链表](#33-合并两个链表)
+    - [3.3.1. 不创建临时结点](#331-不创建临时结点)
+    - [3.3.2. 创建临时结点](#332-创建临时结点)
   - [3.4. 链表排序](#34-链表排序)
   - [3.5. 检查回文链表](#35-检查回文链表)
   - [3.6. 链表等概率随机抽取元素](#36-链表等概率随机抽取元素)
@@ -473,6 +475,8 @@ public ListNode deleteDuplicates(ListNode head) {
 
 ### 3.3. 合并两个链表
 
+#### 3.3.1. 不创建临时结点
+
 ```java
 public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
     if (l1 == null) {
@@ -498,6 +502,27 @@ public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
         p = p.next;
     }
     return l1;
+}
+```
+
+#### 3.3.2. 创建临时结点
+
+```java
+public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
+    ListNode fakeHead = new ListNode(0);
+    ListNode tail = fakeHead;
+    while (l1 != null && l2 != null) {
+        if (l1.val < l2.val) {
+            tail.next = l1;
+            l1 = l1.next;
+        } else {
+            tail.next = l2;
+            l2 = l2.next;
+        }
+        tail = tail.next;
+    }
+    tail.next = l1 == null ? l2 : l1;
+    return fakeHead.next;
 }
 ```
 
@@ -2528,29 +2553,6 @@ public int uniquePaths(int m, int n) {
 }
 ```
 
-### 12.53. 求循环移位的有序数组中的到最小值
-
-[Leetcode 153. Find Minimum in Rotated Sorted Array][leetcode_153]
-
-```java
-public int findMin(int[] nums) {
-    int low = 0;
-    int high = nums.length - 1;
-    while (low < high) {
-        if (nums[low] < nums[high]) {
-            return nums[low];
-        }
-        int mid = (low + high) / 2;
-        if (nums[mid] >= nums[low]) {
-            low = mid + 1;
-        } else {
-            high = mid;
-        }
-    }
-    return nums[low];
-}
-```
-
 ### 12.54. 求集合的所有子集
 
 [Leetcode 78. Subsets][leetcode_78]
@@ -3950,8 +3952,6 @@ def gcd(a, b):
 [leetcode_89]: https://leetcode.com/problems/gray-code/#/description
 
 [leetcode_62]: https://leetcode.com/problems/unique-paths/#/description
-
-[leetcode_153]: https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/#/description
 
 [leetcode_78]: https://leetcode.com/problems/subsets/#/description
 
