修正归并排序递归版本的错误

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -339,10 +339,10 @@ def selection_sort(array):
 def merge(array, temp_array, low, mid, high):
     start1 = low
     end1 = mid
-    start2 = mid
+    start2 = mid + 1
     end2 = high
     k = low
-    while start1 < end1 and start2 < end2:
+    while start1 <= end1 and start2 <= end2:
         if array[start1] < array[start2]:
             temp_array[k] = array[start1]
             start1 += 1
@@ -350,25 +350,29 @@ def merge(array, temp_array, low, mid, high):
             temp_array[k] = array[start2]
             start2 += 1
         k += 1
-    while start1 < end1:
+    while start1 <= end1:
         temp_array[k] = array[start1]
         start1 += 1
         k += 1
-    while start2 < end2:
+    while start2 <= end2:
         temp_array[k] = array[start2]
         start2 += 1
         k += 1
-    for k in range(low, high):
+    for k in range(low, high + 1):
         array[k] = temp_array[k]
 
 
-def merge_sort(array, temp_array, low, high):
+def merge_sort_real(array, temp_array, low, high):
     if low >= high:
         return
     mid = (low + high) // 2
-    merge_sort(array, temp_array, low, mid)
-    merge_sort(array, temp_array, mid + 1, high)
+    merge_sort_real(array, temp_array, low, mid)
+    merge_sort_real(array, temp_array, mid + 1, high)
     merge(array, temp_array, low, mid, high)
+
+
+def merge_sort(array):
+    merge_sort_real(array, [0] * len(array), 0, len(array) - 1)
 ```
 
 #### 2.6.2. 非递归
