简化一些代码

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -1479,17 +1479,15 @@ def invertTree(root):
 [Leetcode 283. Move Zeroes][leetcode_283]
 
 ```java
-public void moveZeroes(int[] nums) {
-    int firstZeroIndex = 0;
-    while (firstZeroIndex < nums.length && nums[firstZeroIndex] != 0) {
-        firstZeroIndex++;
+void moveZeroes(int[] nums) {
+    int currentIndex = 0;
+    for (int num : nums) {
+        if (num != 0) nums[currentIndex] = num;
+        currentIndex++;
     }
-    for (int i = 0; i < nums.length; i++) {
-        if (nums[i] != 0 && i > firstZeroIndex) {
-            nums[firstZeroIndex] = nums[i];
-            nums[i] = 0;
-            firstZeroIndex++;
-        }
+    while (currentIndex < nums.length) {
+        nums[currentIndex] = 0;
+        currentIndex++;
     }
 }
 ```
@@ -1854,26 +1852,19 @@ public int trailingZeroes(int n) {
 [Leetcode 26. Remove Duplicates from Sorted Array][leetcode_26]
 
 ```python
-def removeDuplicates(nums):
+def removeDuplicates(self, nums):
     """
     :type nums: List[int]
     :rtype: int
     """
+    if not nums:
+        return 0
     i = 0
-    j = 1
-    length = len(nums)
-    while j < length:
-        if nums[i] != nums[j]:
-            if (i + 1) == j:
-                i += 1
-                j += 1
-            else:
-                nums[i + 1] = nums[j]
-                i += 1
-                j += 1
-        else:
-            j += 1
-    return i if len(nums) == 0 else i + 1
+    for j in range(1, len(nums)):
+        if nums[j] != nums[i]:
+            i += 1
+            nums[i] = nums[j]
+    return i + 1
 ```
 
 ### 12.24. 链表判断环
@@ -1886,11 +1877,11 @@ def hasCycle(head):
     :type head: ListNode
     :rtype: bool
     """
-    if not head:
+    if head is None or head.next is None:
         return False
     walker = head
     runner = head.next
-    while walker and runner and runner.next:
+    while runner.next and runner.next.next:
         walker = walker.next
         runner = runner.next.next
         if walker == runner:
@@ -1982,24 +1973,16 @@ public List<Integer> findAnagrams(String s, String p) {
 
 ```java
 public boolean isIsomorphic(String s, String t) {
-    if (s.length() != t.length()) {
-        return false;
-    }
-    Map<Character, Integer> pattern = new HashMap<>();
-    Set<Character> exist = new HashSet<>();
+    int[] m1 = new int[256];
+    int[] m2 = new int[256];
     for (int i = 0; i < s.length(); i++) {
-        boolean sExist = exist.contains(s.charAt(i));
-        boolean tExist = pattern.containsKey(t.charAt(i));
-        if (sExist && tExist) {
-            if (pattern.get(t.charAt(i)) + t.charAt(i) != s.charAt(i)) {
-                return false;
-            }
-        } else if (!sExist && !tExist) {
-            exist.add(s.charAt(i));
-            pattern.put(t.charAt(i), s.charAt(i) - t.charAt(i));
-        } else {
+        char k1 = s.charAt(i);
+        char k2 = t.charAt(i);
+        if (m1[k1] != m2[k2]) {
             return false;
         }
+        m1[k1] = i + 1;
+        m2[k2] = i + 1;
     }
     return true;
 }
@@ -2878,33 +2861,22 @@ public int minPathSum(int[][] grid) {
 [Leetcode 75. Sort Colors][leetcode_75]
 
 ```python
-def sortColors(nums):
+def sortColors(self, nums):
     """
     :type nums: List[int]
     :rtype: void Do not return anything, modify nums in-place instead.
     """
     left = 0
-    while left < len(nums) and nums[left] == 0:
-        left += 1
     right = len(nums) - 1
-    while right >= 0 and nums[right] == 2:
-        right -= 1
-    current = left
-    while current <= right and left <= right:
-        if nums[current] == 0:
-            if current == left:
-                current += 1
-            else:
-                nums[left], nums[current] = nums[current], nums[left]
-            left += 1
-        elif nums[current] == 2:
-            if current == right:
-                current += 1
-            else:
-                nums[right], nums[current] = nums[current], nums[right]
+    middle = 0
+    while middle <= right:
+        while nums[middle] == 2 and middle < right:
+            nums[middle], nums[right] = nums[right], nums[middle]
             right -= 1
-        else:
-            current += 1
+        while nums[middle] == 0 and middle > left:
+            nums[middle], nums[left] = nums[left], nums[middle]
+            left += 1
+        middle += 1
 ```
 
 ### 12.67. 求第n位仅由指定因数组成的数字
