--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -121,57 +121,59 @@
   - [12.50. 由\[1, n\]组成的二叉搜索树的个数](#1250-由1-n组成的二叉搜索树的个数)
   - [12.51. 格雷码](#1251-格雷码)
   - [12.52. 从m x n棋盘左上角走到右下角的路径总数](#1252-从m-x-n棋盘左上角走到右下角的路径总数)
-  - [12.53. 求循环移位的有序数组中的到最小值](#1253-求循环移位的有序数组中的到最小值)
-  - [12.54. 求集合的所有子集](#1254-求集合的所有子集)
-  - [12.55. 求（元素可重复）集合的所有子集](#1255-求元素可重复集合的所有子集)
-  - [12.56. 判断数组arr中是否存在arr\[i\] &lt; arr\[j\] &lt; arr\[k\]](#1256-判断数组arr中是否存在arri-lt-arrj-lt-arrk)
-  - [12.57. 查找数组中第k大的数](#1257-查找数组中第k大的数)
-  - [12.58. 链表删除倒数第n个结点](#1258-链表删除倒数第n个结点)
-  - [12.59. 判断数组是否可以拼接为正方形](#1259-判断数组是否可以拼接为正方形)
-  - [12.60. 快速`pow()`](#1260-快速pow)
-  - [12.61. 判断数组是否可以分为相等的两部分](#1261-判断数组是否可以分为相等的两部分)
-  - [12.62. 在矩阵中查找指定值](#1262-在矩阵中查找指定值)
-  - [12.63. 将矩阵顺时针旋转90度](#1263-将矩阵顺时针旋转90度)
-  - [12.64. 最长递增子序列](#1264-最长递增子序列)
-  - [12.65. 求二维矩阵由左上角到右下角的最小和](#1265-求二维矩阵由左上角到右下角的最小和)
-  - [12.66. 将由0、1、2组成的数组排序](#1266-将由012组成的数组排序)
-  - [12.67. 求第n位仅由指定因数组成的数字](#1267-求第n位仅由指定因数组成的数字)
-  - [12.68. 数组中查找极大值](#1268-数组中查找极大值)
-  - [12.69. 判断n能否由平方数的和组成](#1269-判断n能否由平方数的和组成)
-  - [12.70. 删除二叉搜索树中的结点](#1270-删除二叉搜索树中的结点)
-  - [12.71. 检查字符串是否是合法的二叉树前序遍历结果](#1271-检查字符串是否是合法的二叉树前序遍历结果)
-  - [12.72. 中缀表达式转后缀表达式](#1272-中缀表达式转后缀表达式)
-  - [12.73. 排列的下一种情况](#1273-排列的下一种情况)
-  - [12.74. 求旋转有序数组的最小值](#1274-求旋转有序数组的最小值)
-  - [12.75. 在旋转有序数组中查找指定值](#1275-在旋转有序数组中查找指定值)
-  - [12.76. 在旋转（元素可重复）有序数组中查找指定值](#1276-在旋转元素可重复有序数组中查找指定值)
-  - [12.77. 有序数组中查找特定元素的第一个和最后一个索引](#1277-有序数组中查找特定元素的第一个和最后一个索引)
-  - [12.78. 有序数组中查找指定值的插入位置](#1278-有序数组中查找指定值的插入位置)
-  - [12.79. 实现`pow(x, n)`](#1279-实现powx-n)
-  - [12.80. 第k个排列](#1280-第k个排列)
-  - [12.81. 链表向右循环移动k个位置](#1281-链表向右循环移动k个位置)
-  - [12.82. 先序遍历和中序遍历构建二叉树](#1282-先序遍历和中序遍历构建二叉树)
-  - [12.83. 中序遍历和后序遍历构建二叉树](#1283-中序遍历和后序遍历构建二叉树)
-  - [12.84. 求杨辉三角第k行的值](#1284-求杨辉三角第k行的值)
-  - [12.85. 克隆图](#1285-克隆图)
-  - [12.86. 查找数组中的极大值元素](#1286-查找数组中的极大值元素)
-  - [12.87. 将数组合并拼接为最大的数](#1287-将数组合并拼接为最大的数)
-  - [12.88. 计算完全二叉树的结点数](#1288-计算完全二叉树的结点数)
-  - [12.89. 加减乘除（无括号）计算器](#1289-加减乘除无括号计算器)
-  - [12.90. 加减（带括号）计算器](#1290-加减带括号计算器)
-  - [12.91. 二叉搜索树中第k小的数](#1291-二叉搜索树中第k小的数)
-  - [12.92. 求（元素可更新）数组指定区间的和](#1292-求元素可更新数组指定区间的和)
-  - [12.93. 求数组中任意两个元素异或的最大值](#1293-求数组中任意两个元素异或的最大值)
-  - [12.94. 二叉搜索树的序列化和反序列化](#1294-二叉搜索树的序列化和反序列化)
-  - [12.95. 轮流取数判断先取者是否必胜](#1295-轮流取数判断先取者是否必胜)
-  - [12.96. 一串数加上分别加上加号或减号使其结果等于指定值](#1296-一串数加上分别加上加号或减号使其结果等于指定值)
-  - [12.97. 有序数组中除一个数仅出现一次外，其他数均出现两次，求这个数](#1297-有序数组中除一个数仅出现一次外其他数均出现两次求这个数)
-  - [12.98. 最长任意元素差最大为1的子序列](#1298-最长任意元素差最大为1的子序列)
-  - [12.99. 数组中寻找任意三个元素的最大积](#1299-数组中寻找任意三个元素的最大积)
-  - [12.100. 快速替换10亿条标题中的5万个敏感词](#12100-快速替换10亿条标题中的5万个敏感词)
-  - [12.101. 轮流取数的必胜策略](#12101-轮流取数的必胜策略)
-  - [12.102. 最大公约数（辗转相除法）](#12102-最大公约数辗转相除法)
-  - [12.103. 最小公倍数](#12103-最小公倍数)
+  - [12.53. 求集合的所有子集](#1253-求集合的所有子集)
+  - [12.54. 求（元素可重复）集合的所有子集](#1254-求元素可重复集合的所有子集)
+  - [12.55. 判断数组arr中是否存在arr\[i\] &lt; arr\[j\] &lt; arr\[k\]](#1255-判断数组arr中是否存在arri-lt-arrj-lt-arrk)
+  - [12.56. 查找数组中第k大的数](#1256-查找数组中第k大的数)
+  - [12.57. 链表删除倒数第n个结点](#1257-链表删除倒数第n个结点)
+  - [12.58. 判断数组是否可以拼接为正方形](#1258-判断数组是否可以拼接为正方形)
+  - [12.59. 快速`pow()`](#1259-快速pow)
+  - [12.60. 判断数组是否可以分为相等的两部分](#1260-判断数组是否可以分为相等的两部分)
+  - [12.61. 在矩阵中查找指定值](#1261-在矩阵中查找指定值)
+  - [12.62. 将矩阵顺时针旋转90度](#1262-将矩阵顺时针旋转90度)
+  - [12.63. 最长递增子序列](#1263-最长递增子序列)
+  - [12.64. 求二维矩阵由左上角到右下角的最小和](#1264-求二维矩阵由左上角到右下角的最小和)
+  - [12.65. 将由0、1、2组成的数组排序](#1265-将由012组成的数组排序)
+  - [12.66. 求第n位仅由指定因数组成的数字](#1266-求第n位仅由指定因数组成的数字)
+  - [12.67. 数组中查找极大值](#1267-数组中查找极大值)
+  - [12.68. 判断n能否由平方数的和组成](#1268-判断n能否由平方数的和组成)
+  - [12.69. 删除二叉搜索树中的结点](#1269-删除二叉搜索树中的结点)
+  - [12.70. 检查字符串是否是合法的二叉树前序遍历结果](#1270-检查字符串是否是合法的二叉树前序遍历结果)
+  - [12.71. 中缀表达式转后缀表达式](#1271-中缀表达式转后缀表达式)
+  - [12.72. 排列的下一种情况](#1272-排列的下一种情况)
+  - [12.73. 求旋转有序数组的最小值](#1273-求旋转有序数组的最小值)
+  - [12.74. 在旋转有序数组中查找指定值](#1274-在旋转有序数组中查找指定值)
+  - [12.75. 在旋转（元素可重复）有序数组中查找指定值](#1275-在旋转元素可重复有序数组中查找指定值)
+  - [12.76. 有序数组中查找特定元素的第一个和最后一个索引](#1276-有序数组中查找特定元素的第一个和最后一个索引)
+  - [12.77. 有序数组中查找指定值的插入位置](#1277-有序数组中查找指定值的插入位置)
+  - [12.78. 实现`pow(x, n)`](#1278-实现powx-n)
+  - [12.79. 第k个排列](#1279-第k个排列)
+  - [12.80. 链表向右循环移动k个位置](#1280-链表向右循环移动k个位置)
+  - [12.81. 先序遍历和中序遍历构建二叉树](#1281-先序遍历和中序遍历构建二叉树)
+  - [12.82. 中序遍历和后序遍历构建二叉树](#1282-中序遍历和后序遍历构建二叉树)
+  - [12.83. 求杨辉三角第k行的值](#1283-求杨辉三角第k行的值)
+  - [12.84. 克隆图](#1284-克隆图)
+  - [12.85. 查找数组中的极大值元素](#1285-查找数组中的极大值元素)
+  - [12.86. 将数组合并拼接为最大的数](#1286-将数组合并拼接为最大的数)
+  - [12.87. 计算完全二叉树的结点数](#1287-计算完全二叉树的结点数)
+  - [12.88. 加减乘除（无括号）计算器](#1288-加减乘除无括号计算器)
+  - [12.89. 加减（带括号）计算器](#1289-加减带括号计算器)
+  - [12.90. 二叉搜索树中第k小的数](#1290-二叉搜索树中第k小的数)
+  - [12.91. 求（元素可更新）数组指定区间的和](#1291-求元素可更新数组指定区间的和)
+  - [12.92. 求数组中任意两个元素异或的最大值](#1292-求数组中任意两个元素异或的最大值)
+  - [12.93. 二叉搜索树的序列化和反序列化](#1293-二叉搜索树的序列化和反序列化)
+  - [12.94. 轮流取数判断先取者是否必胜](#1294-轮流取数判断先取者是否必胜)
+  - [12.95. 一串数加上分别加上加号或减号使其结果等于指定值](#1295-一串数加上分别加上加号或减号使其结果等于指定值)
+  - [12.96. 有序数组中除一个数仅出现一次外，其他数均出现两次，求这个数](#1296-有序数组中除一个数仅出现一次外其他数均出现两次求这个数)
+  - [12.97. 最长任意元素差最大为1的子序列](#1297-最长任意元素差最大为1的子序列)
+  - [12.98. 数组中寻找任意三个元素的最大积](#1298-数组中寻找任意三个元素的最大积)
+  - [12.99. 生成结点个数为n的所有二叉搜索树](#1299-生成结点个数为n的所有二叉搜索树)
+  - [12.100. 数组中除一个数仅出现一次外，其他数均出现三次，求这个数](#12100-数组中除一个数仅出现一次外其他数均出现三次求这个数)
+  - [12.101. 轮流取数先取者是否必胜](#12101-轮流取数先取者是否必胜)
+  - [12.102. 快速替换10亿条标题中的5万个敏感词](#12102-快速替换10亿条标题中的5万个敏感词)
+  - [12.103. 轮流取数的必胜策略](#12103-轮流取数的必胜策略)
+  - [12.104. 最大公约数（辗转相除法）](#12104-最大公约数辗转相除法)
+  - [12.105. 最小公倍数](#12105-最小公倍数)
 
 <!-- /TOC -->
 
@@ -1893,6 +1895,30 @@ def hasCycle(head):
 
 [Leetcode 142. Linked List Cycle II][leetcode_142]
 
+```python
+def detectCycle(head):
+    """
+    :type head: ListNode
+    :rtype: ListNode
+    """
+    if head is None or head.next is None:
+        return None
+    walker = head
+    runner = head
+    while runner and runner.next:
+        walker = walker.next
+        runner = runner.next.next
+        if walker == runner:
+            break
+    if runner is None:
+        return None
+    walker = head
+    while walker != runner:
+        walker = walker.next
+        runner = runner.next
+    return walker
+```
+
 ### 12.26. 判断是否为回文数
 
 [Leetcode 9. Palindrome Number][leetcode_9]
@@ -2540,7 +2566,7 @@ public int uniquePaths(int m, int n) {
 }
 ```
 
-### 12.54. 求集合的所有子集
+### 12.53. 求集合的所有子集
 
 [Leetcode 78. Subsets][leetcode_78]
 
@@ -2560,7 +2586,7 @@ def subsets(nums):
     return result
 ```
 
-### 12.55. 求（元素可重复）集合的所有子集
+### 12.54. 求（元素可重复）集合的所有子集
 
 [Leetcode 90. Subsets II][leetcode_90]
 
@@ -2583,7 +2609,7 @@ def subsetsWithDup(self, nums):
     return result
 ```
 
-### 12.56. 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]
+### 12.55. 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]
 
 [Leetcode 334. Increasing Triplet Subsequence][leetcode_334]
 
@@ -2604,7 +2630,7 @@ public boolean increasingTriplet(int[] nums) {
 }
 ```
 
-### 12.57. 查找数组中第k大的数
+### 12.56. 查找数组中第k大的数
 
 [Leetcode 215. Kth Largest Element in an Array][leetcode_215]
 
@@ -2637,7 +2663,7 @@ def find_kth_largest(nums, k):
     return nums[k]
 ```
 
-### 12.58. 链表删除倒数第n个结点
+### 12.57. 链表删除倒数第n个结点
 
 [Leetcode 19. Remove Nth Node From End of List][leetcode_19]
 
@@ -2664,7 +2690,7 @@ def removeNthFromEnd(head, n):
     return head
 ```
 
-### 12.59. 判断数组是否可以拼接为正方形
+### 12.58. 判断数组是否可以拼接为正方形
 
 [Leetcode 473. Matchsticks to Square][leetcode_473]
 
@@ -2711,7 +2737,7 @@ public boolean makesquare(int[] nums) {
 }
 ```
 
-### 12.60. 快速`pow()`
+### 12.59. 快速`pow()`
 
 [Leetcode 372. Super Pow][leetcode_372]
 
@@ -2737,7 +2763,7 @@ public int superPow(int a, int[] b) {
     return result;
 ```
 
-### 12.61. 判断数组是否可以分为相等的两部分
+### 12.60. 判断数组是否可以分为相等的两部分
 
 [Leetcode 416. Partition Equal Subset Sum][leetcode_416]
 
@@ -2765,7 +2791,7 @@ public boolean canPartition(int[] nums) {
 }
 ```
 
-### 12.62. 在矩阵中查找指定值
+### 12.61. 在矩阵中查找指定值
 
 [Leetcode 240. Search a 2D Matrix II][leetcode_240]
 
@@ -2791,7 +2817,7 @@ def searchMatrix(matrix, target):
     return False
 ```
 
-### 12.63. 将矩阵顺时针旋转90度
+### 12.62. 将矩阵顺时针旋转90度
 
 [Leetcode 48. Rotate Image][leetcode_48]
 
@@ -2810,7 +2836,7 @@ def rotate(matrix):
             matrix[i][j], matrix[j][i] = matrix[j][i], matrix[i][j]
 ```
 
-### 12.64. 最长递增子序列
+### 12.63. 最长递增子序列
 
 [Leetcode 300. Longest Increasing Subsequence][leetcode_300]
 
@@ -2831,7 +2857,7 @@ def lengthOfLIS(nums):
     return max(dp)
 ```
 
-### 12.65. 求二维矩阵由左上角到右下角的最小和
+### 12.64. 求二维矩阵由左上角到右下角的最小和
 
 [Leetcode 64. Minimum Path Sum][leetcode_64]
 
@@ -2856,7 +2882,7 @@ public int minPathSum(int[][] grid) {
 }
 ```
 
-### 12.66. 将由0、1、2组成的数组排序
+### 12.65. 将由0、1、2组成的数组排序
 
 [Leetcode 75. Sort Colors][leetcode_75]
 
@@ -2879,7 +2905,7 @@ def sortColors(self, nums):
         middle += 1
 ```
 
-### 12.67. 求第n位仅由指定因数组成的数字
+### 12.66. 求第n位仅由指定因数组成的数字
 
 [Leetcode 313. Super Ugly Number][leetcode_313]
 
@@ -2907,7 +2933,7 @@ public int nthSuperUglyNumber(int n, int[] primes) {
 }
 ```
 
-### 12.68. 数组中查找极大值
+### 12.67. 数组中查找极大值
 
 [Leetcode 162. Find Peak Elementr][leetcode_162]
 
@@ -2933,7 +2959,7 @@ public int findPeakElement(int[] nums) {
 }
 ```
 
-### 12.69. 判断n能否由平方数的和组成
+### 12.68. 判断n能否由平方数的和组成
 
 [Leetcode 279. Perfect Squares][leetcode_279]
 
@@ -2953,7 +2979,7 @@ def numSquares(self, n):
     return dp[n]
 ```
 
-### 12.70. 删除二叉搜索树中的结点
+### 12.69. 删除二叉搜索树中的结点
 
 [Leetcode 450. Delete Node in a BST][leetcode_450]
 
@@ -2984,7 +3010,7 @@ def deleteNode(root, key):
     return root
 ```
 
-### 12.71. 检查字符串是否是合法的二叉树前序遍历结果
+### 12.70. 检查字符串是否是合法的二叉树前序遍历结果
 
 [Leetcode 331. Verify Preorder Serialization of a Binary Tree][leetcode_331]
 
@@ -3004,7 +3030,7 @@ def isValidSerialization(self, preorder):
     return degree == 0
 ```
 
-### 12.72. 中缀表达式转后缀表达式
+### 12.71. 中缀表达式转后缀表达式
 
 ```java
 String infixToPostfix(String infix) {
@@ -3046,7 +3072,7 @@ String infixToPostfix(String infix) {
 }
 ```
 
-### 12.73. 排列的下一种情况
+### 12.72. 排列的下一种情况
 
 [Leetcode 31. Next Permutation][leetcode_31]
 
@@ -3069,7 +3095,7 @@ def nextPermutation(self, nums):
     nums[i + 1:] = sorted(nums[i + 1:])
 ```
 
-### 12.74. 求旋转有序数组的最小值
+### 12.73. 求旋转有序数组的最小值
 
 [Leetcode 153. Find Minimum in Rotated Sorted Array][leetcode_153]
 
@@ -3091,7 +3117,7 @@ def findMin(self, nums):
     return nums[low]
 ```
 
-### 12.75. 在旋转有序数组中查找指定值
+### 12.74. 在旋转有序数组中查找指定值
 
 [Leetcode 33. Search in Rotated Sorted Array][leetcode_33]
 
@@ -3126,7 +3152,7 @@ def search(self, nums, target):
     return -1
 ```
 
-### 12.76. 在旋转（元素可重复）有序数组中查找指定值
+### 12.75. 在旋转（元素可重复）有序数组中查找指定值
 
 [Leetcode 81. Search in Rotated Sorted Array II][leetcode_81]
 
@@ -3160,7 +3186,7 @@ def search(self, nums, target):
     return nums[low] == target
 ```
 
-### 12.77. 有序数组中查找特定元素的第一个和最后一个索引
+### 12.76. 有序数组中查找特定元素的第一个和最后一个索引
 
 [Leetcode 34. Search for a Range][leetcode_34]
 
@@ -3193,7 +3219,7 @@ def searchRange(self, nums, target):
     return [low, high]
 ```
 
-### 12.78. 有序数组中查找指定值的插入位置
+### 12.77. 有序数组中查找指定值的插入位置
 
 [Leetcode 35. Search Insert Position][leetcode_35]
 
@@ -3217,7 +3243,7 @@ def searchInsert(self, nums, target):
     return low
 ```
 
-### 12.79. 实现`pow(x, n)`
+### 12.78. 实现`pow(x, n)`
 
 [Leetcode 50. Pow(x, n)][leetcode_50]
 
@@ -3238,7 +3264,7 @@ def myPow(self, x, n):
     return myPow(x * x, n // 2)
 ```
 
-### 12.80. 第k个排列
+### 12.79. 第k个排列
 
 [Leetcode 60. Permutation Sequence][leetcode_60]
 
@@ -3264,7 +3290,7 @@ def getPermutation(self, n, k):
     return result
 ```
 
-### 12.81. 链表向右循环移动k个位置
+### 12.80. 链表向右循环移动k个位置
 
 [Leetcode 61. Rotate List][leetcode_61]
 
@@ -3293,7 +3319,7 @@ def rotateRight(self, head, k):
     return head
 ```
 
-### 12.82. 先序遍历和中序遍历构建二叉树
+### 12.81. 先序遍历和中序遍历构建二叉树
 
 [Leetcode 105. Construct Binary Tree from Preorder and Inorder Traversal][leetcode_105]
 
@@ -3313,7 +3339,7 @@ def buildTree(self, preorder, inorder):
     return node
 ```
 
-### 12.83. 中序遍历和后序遍历构建二叉树
+### 12.82. 中序遍历和后序遍历构建二叉树
 
 [Leetcode 106. Construct Binary Tree from Inorder and Postorder Traversal][leetcode_106]
 
@@ -3333,7 +3359,7 @@ def buildTree(self, inorder, postorder):
     return node
 ```
 
-### 12.84. 求杨辉三角第k行的值
+### 12.83. 求杨辉三角第k行的值
 
 [Leetcode 119. Pascal's Triangle II][leetcode_119]
 
@@ -3351,7 +3377,7 @@ def getRow(self, rowIndex):
     return result
 ```
 
-### 12.85. 克隆图
+### 12.84. 克隆图
 
 [Leetcode 119. Pascal's Triangle II][leetcode_119]
 
@@ -3370,7 +3396,7 @@ def cloneGraph(self, node):
     return clone(node, memory)
 ```
 
-### 12.86. 查找数组中的极大值元素
+### 12.85. 查找数组中的极大值元素
 
 [Leetcode 162. Find Peak Element][leetcode_162]
 
@@ -3395,7 +3421,7 @@ def findPeakElement(self, nums):
     return low
 ```
 
-### 12.87. 将数组合并拼接为最大的数
+### 12.86. 将数组合并拼接为最大的数
 
 [Leetcode 179. Largest Number][leetcode_179]
 
@@ -3408,7 +3434,7 @@ def largestNumber(self, nums):
     return ''.join(strs)
 ```
 
-### 12.88. 计算完全二叉树的结点数
+### 12.87. 计算完全二叉树的结点数
 
 [Leetcode 222. Count Complete Tree Nodes][leetcode_222]
 
@@ -3435,7 +3461,7 @@ def countNodes(self, root):
     return 1 + self.countNodes(root.left) + self.countNodes(root.right)
 ```
 
-### 12.89. 加减乘除（无括号）计算器
+### 12.88. 加减乘除（无括号）计算器
 
 [Leetcode 227. Basic Calculator II][leetcode_227]
 
@@ -3478,7 +3504,7 @@ def calculate(self, s):
     return result
 ```
 
-### 12.90. 加减（带括号）计算器
+### 12.89. 加减（带括号）计算器
 
 [Leetcode 224. Basic Calculator][leetcode_224]
 
@@ -3513,7 +3539,7 @@ def calculate(self, s):
     return result
 ```
 
-### 12.91. 二叉搜索树中第k小的数
+### 12.90. 二叉搜索树中第k小的数
 
 [Leetcode 230. Kth Smallest Element in a BST][leetcode_230]
 
@@ -3541,7 +3567,7 @@ def kthSmallest(self, root, k):
     return self.result
 ```
 
-### 12.92. 求（元素可更新）数组指定区间的和
+### 12.91. 求（元素可更新）数组指定区间的和
 
 [Leetcode 307. Range Sum Query - Mutable][leetcode_307]
 
@@ -3614,7 +3640,7 @@ class NumArray(object):
         return sum_ran(self.root, i, j)
 ```
 
-### 12.93. 求数组中任意两个元素异或的最大值
+### 12.92. 求数组中任意两个元素异或的最大值
 
 [Leetcode 421. Maximum XOR of Two Numbers in an Array][leetcode_421]
 
@@ -3639,7 +3665,7 @@ def findMaximumXOR(self, nums):
     return result
 ```
 
-### 12.94. 二叉搜索树的序列化和反序列化
+### 12.93. 二叉搜索树的序列化和反序列化
 
 [Leetcode 449. Serialize and Deserialize BST][leetcode_449]
 
@@ -3686,7 +3712,7 @@ class Codec:
         return construct(data, 0, len(data))
 ```
 
-### 12.95. 轮流取数判断先取者是否必胜
+### 12.94. 轮流取数判断先取者是否必胜
 
 [Leetcode 486. Predict the Winner][leetcode_486]
 
@@ -3696,19 +3722,19 @@ def PredictTheWinner(self, nums):
     :type nums: List[int]
     :rtype: bool
     """
-    dp = [[0] * len(nums) for i in range(len(nums))]
-    for j in range(len(nums)):
-        current_sum = 0
-        for i in range(j, -1, -1):
-            current_sum += nums[i]
-            if i == j:
-                dp[i][i] = nums[i]
-            else:
-                dp[i][j] = max(current_sum - dp[i][j - 1], current_sum - dp[i + 1][j])
-    return 2 * dp[0][len(nums) - 1] >= sum(nums)
+
+    def predict(nums, start, end, first, second):
+        if start > end:
+            return first >= second
+        return not predict(nums, start + 1, end, second, first + nums[start]) \
+                or not predict(nums, start, end - 1, second, first + nums[end])
+
+    if len(nums) <= 1:
+        return True
+    return predict(nums, 0, len(nums) - 1, 0, 0)
 ```
 
-### 12.96. 一串数加上分别加上加号或减号使其结果等于指定值
+### 12.95. 一串数加上分别加上加号或减号使其结果等于指定值
 
 [Leetcode 494. Target Sum][leetcode_494]
 
@@ -3734,7 +3760,7 @@ def findTargetSumWays(self, nums, S):
     return map[sum_nums + S]
 ```
 
-### 12.97. 有序数组中除一个数仅出现一次外，其他数均出现两次，求这个数
+### 12.96. 有序数组中除一个数仅出现一次外，其他数均出现两次，求这个数
 
 [Leetcode 540. Single Element in a Sorted Array][leetcode_540]
 
@@ -3755,7 +3781,7 @@ def singleNonDuplicate(self, nums):
     return nums[low]
 ```
 
-### 12.98. 最长任意元素差最大为1的子序列
+### 12.97. 最长任意元素差最大为1的子序列
 
 [Leetcode 594. Longest Harmonious Subsequence][leetcode_594]
 
@@ -3777,7 +3803,7 @@ def findLHS(self, nums):
     return result
 ```
 
-### 12.99. 数组中寻找任意三个元素的最大积
+### 12.98. 数组中寻找任意三个元素的最大积
 
 [Leetcode 628. Maximum Product of Three Numbers][leetcode_628]
 
@@ -3810,7 +3836,99 @@ def maximumProduct(self, nums):
     return max(max_1 * max_2 * max_3, max_1 * min_1 * min_2)
 ```
 
-### 12.100. 快速替换10亿条标题中的5万个敏感词
+### 12.99. 生成结点个数为n的所有二叉搜索树
+
+[Leetcode 95. Unique Binary Search Trees II][leetcode_95]
+
+```python
+def generateTrees(self, n):
+    """
+    :type n: int
+    :rtype: List[TreeNode]
+    """
+    def generate(start, end):
+        result = []
+        if start > end:
+            return [None]
+        for i in range(start, end + 1):
+            lefts = generate(start, i - 1)
+            rights = generate(i + 1, end)
+            for left in lefts:
+                for right in rights:
+                    root = TreeNode(i)
+                    root.left = left
+                    root.right = right
+                    result.append(root)
+        return result
+
+    if n == 0:
+        return []
+    return generate(1, n)
+```
+
+### 12.100. 数组中除一个数仅出现一次外，其他数均出现三次，求这个数
+
+[Leetcode 137. Single Number II][leetcode_137]
+
+```python
+def singleNumber(self, nums):
+    """
+    :type nums: List[int]
+    :rtype: int
+    """
+    x1 = 0
+    x2 = 0
+    for num in nums:
+        x2 ^= x1 & num
+        x1 ^= num
+        mask = ~(x1 & x2)
+        x2 &= mask
+        x1 &= mask
+    return x1
+```
+
+### 12.101. 轮流取数先取者是否必胜
+
+[Leetcode 464. Can I Win][leetcode_464]
+
+```python
+def canIWin(self, maxChoosableInteger, desiredTotal):
+    """
+    :type maxChoosableInteger: int
+    :type desiredTotal: int
+    :rtype: bool
+    """
+    def to_key(choosed):
+        result = 1
+        for item in choosed:
+            result <<= 1
+            if item:
+                result |= 1
+        return result
+
+    def win(choosed, memory, total):
+        key = to_key(choosed)
+        if key in memory:
+            return memory[key]
+        for i in range(1, len(choosed)):
+            if not choosed[i]:
+                choosed[i] = True
+                if total <= i or not win(choosed, memory, total - i):
+                    memory[key] = True
+                    choosed[i] = False
+                    return True
+                choosed[i] = False
+        memory[key] = False
+        return False
+
+    if desiredTotal == 0:
+        return True
+    if (1 + maxChoosableInteger) * maxChoosableInteger // 2 < desiredTotal:
+        return False
+    return win([False] * (maxChoosableInteger + 1), {}, desiredTotal)
+```
+
+### 12.102. 快速替换10亿条标题中的5万个敏感词
 
 Aho-Corasick算法（AC自动机）：
 
@@ -3820,13 +3938,13 @@ Aho-Corasick算法（AC自动机）：
 
 参考：[AC自动机算法详解 - 极限定律 - C++博客][aho_corasick_algorithm]
 
-### 12.101. 轮流取数的必胜策略
+### 12.103. 轮流取数的必胜策略
 
 问题描述：有2N个自然数，甲乙两人轮流取。一人一次取一个，而且只能取头尾两个数中的一个，取过的数划去，直到2N个数取完，取得的数的总和大的人获胜。那么，先取的人是否有必胜策略？
 
 解决方法：先取的人只要取了奇数位上的数，就把偶数位的数留给后取的人，而且只要坚持取奇数位上的数，就一直会把偶数位上的数留给后取的人。这样就会取走所有奇数位上的数。（这种方法同样可使先取的人把所有偶数位上的数取走）所以，先取的人只要一开始算出是所有偶数位上的数总和大，还是所有奇数位上的数总和大，就一定会胜。
 
-### 12.102. 最大公约数（辗转相除法）
+### 12.104. 最大公约数（辗转相除法）
 
 ```python
 def gcd(a, b):
@@ -3835,7 +3953,7 @@ def gcd(a, b):
     return a
 ```
 
-### 12.103. 最小公倍数
+### 12.105. 最小公倍数
 
 `(a * b)/gcd(a, b)`
 
@@ -4028,3 +4146,7 @@ def gcd(a, b):
 [leetcode_594]: https://leetcode.com/problems/longest-harmonious-subsequence/description/
 
 [leetcode_628]: https://leetcode.com/problems/maximum-product-of-three-numbers/description/
+
+[leetcode_95]: https://leetcode.com/problems/unique-binary-search-trees-ii/description/
+
+[leetcode_137]: https://leetcode.com/problems/single-number-ii/description/
