增加一些题目

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -169,11 +169,14 @@
   - [12.98. 数组中寻找任意三个元素的最大积](#1298-数组中寻找任意三个元素的最大积)
   - [12.99. 生成结点个数为n的所有二叉搜索树](#1299-生成结点个数为n的所有二叉搜索树)
   - [12.100. 数组中除一个数仅出现一次外，其他数均出现三次，求这个数](#12100-数组中除一个数仅出现一次外其他数均出现三次求这个数)
-  - [12.101. 轮流取数先取者是否必胜](#12101-轮流取数先取者是否必胜)
-  - [12.102. 快速替换10亿条标题中的5万个敏感词](#12102-快速替换10亿条标题中的5万个敏感词)
-  - [12.103. 轮流取数的必胜策略](#12103-轮流取数的必胜策略)
-  - [12.104. 最大公约数（辗转相除法）](#12104-最大公约数辗转相除法)
-  - [12.105. 最小公倍数](#12105-最小公倍数)
+  - [12.101. 将一个数拆分为多个数的和，并使这些数的积最大](#12101-将一个数拆分为多个数的和并使这些数的积最大)
+  - [12.102. 轮流取数先取者是否必胜](#12102-轮流取数先取者是否必胜)
+  - [12.103. 区间调度问题](#12103-区间调度问题)
+    - [12.103.1. 最多区间调度](#121031-最多区间调度)
+  - [12.104. 快速替换10亿条标题中的5万个敏感词](#12104-快速替换10亿条标题中的5万个敏感词)
+  - [12.105. 轮流取数的必胜策略](#12105-轮流取数的必胜策略)
+  - [12.106. 最大公约数（辗转相除法）](#12106-最大公约数辗转相除法)
+  - [12.107. 最小公倍数](#12107-最小公倍数)
 
 <!-- /TOC -->
 
@@ -3887,7 +3890,36 @@ def singleNumber(self, nums):
     return x1
 ```
 
-### 12.101. 轮流取数先取者是否必胜
+### 12.101. 将一个数拆分为多个数的和，并使这些数的积最大
+
+[Leetcode 343. Integer Break][leetcode_343]
+
+```python
+def integerBreak(self, n):
+    """
+    :type n: int
+    :rtype: int
+    """
+    if n == 2:
+        return 1
+    if n == 3:
+        return 2
+    if n == 4:
+        return 4
+    result = 1
+    while n > 4:
+        n -= 3
+        result *= 3
+    if n == 4:
+        result *= 4
+    elif n == 3:
+        result *= 3
+    elif n == 2:
+        result *= 2
+    return result
+```
+
+### 12.102. 轮流取数先取者是否必胜
 
 [Leetcode 464. Can I Win][leetcode_464]
 
@@ -3928,7 +3960,29 @@ def canIWin(self, maxChoosableInteger, desiredTotal):
     return win([False] * (maxChoosableInteger + 1), {}, desiredTotal)
 ```
 
-### 12.102. 快速替换10亿条标题中的5万个敏感词
+### 12.103. 区间调度问题
+
+#### 12.103.1. 最多区间调度
+
+[Leetcode 452. Minimum Number of Arrows to Burst Balloons][leetcode_452]
+
+```python
+def maxNonoverlapIntervals(self, intervals):
+    """
+    :type points: List[List[int]]
+    :rtype: int
+    """
+    intervals.sort(key=lambda interval: interval[1])
+    current_start = -sys.maxsize
+    result = 0
+    for interval in intervals:
+        if interval[0] > current_start:
+            current_start = interval[1]
+            result += 1
+    return result
+```
+
+### 12.104. 快速替换10亿条标题中的5万个敏感词
 
 Aho-Corasick算法（AC自动机）：
 
@@ -3938,13 +3992,13 @@ Aho-Corasick算法（AC自动机）：
 
 参考：[AC自动机算法详解 - 极限定律 - C++博客][aho_corasick_algorithm]
 
-### 12.103. 轮流取数的必胜策略
+### 12.105. 轮流取数的必胜策略
 
 问题描述：有2N个自然数，甲乙两人轮流取。一人一次取一个，而且只能取头尾两个数中的一个，取过的数划去，直到2N个数取完，取得的数的总和大的人获胜。那么，先取的人是否有必胜策略？
 
 解决方法：先取的人只要取了奇数位上的数，就把偶数位的数留给后取的人，而且只要坚持取奇数位上的数，就一直会把偶数位上的数留给后取的人。这样就会取走所有奇数位上的数。（这种方法同样可使先取的人把所有偶数位上的数取走）所以，先取的人只要一开始算出是所有偶数位上的数总和大，还是所有奇数位上的数总和大，就一定会胜。
 
-### 12.104. 最大公约数（辗转相除法）
+### 12.106. 最大公约数（辗转相除法）
 
 ```python
 def gcd(a, b):
@@ -3953,7 +4007,7 @@ def gcd(a, b):
     return a
 ```
 
-### 12.105. 最小公倍数
+### 12.107. 最小公倍数
 
 `(a * b)/gcd(a, b)`
 
@@ -4150,3 +4204,7 @@ def gcd(a, b):
 [leetcode_95]: https://leetcode.com/problems/unique-binary-search-trees-ii/description/
 
 [leetcode_137]: https://leetcode.com/problems/single-number-ii/description/
+
+[leetcode_343]: https://leetcode.com/problems/integer-break/description/
+
+[leetcode_452]: https://leetcode.com/problems/minimum-number-of-arrows-to-burst-balloons/description/
