--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -47,6 +47,8 @@
   - [1.11. 斐波拉契数列](#111-斐波拉契数列)
     - [1.11.1. 自顶向下](#1111-自顶向下)
     - [1.11.2. 自底向上](#1112-自底向上)
+  - [1.12. 动态规划](#112-动态规划)
+    - [1.12.1. 背包问题](#1121-背包问题)
 - [2. 经典题目](#2-经典题目)
   - [2.1. 计算数字二进制表示的1的个数](#21-计算数字二进制表示的1的个数)
   - [2.2. 数组中除一个数仅出现一次外，其他数均出现两次，找出这个数](#22-数组中除一个数仅出现一次外其他数均出现两次找出这个数)
@@ -1375,6 +1377,72 @@ def fibonacci(n):
         b = temp
         n -= 1
     return b
+```
+
+### 1.12. 动态规划
+
+#### 1.12.1. 背包问题
+
+##### 01背包
+
+###### 求最大价值
+
+```python
+def knapsack(max_weight, weights, values):
+    n = len(weights)
+    dp = [[0] * (max_weight + 1) for _ in range(n + 1)]
+    for i in range(1, n + 1):
+        for j in range(1, max_weight + 1):
+            dp[i][j] = dp[i - 1][j]
+            if weights[i - 1] <= j:
+                dp[i][j] = max(dp[i][j], dp[i - 1][j - weights[i - 1]] + values[i - 1])
+    return dp[n][max_weight]
+
+def knapsack(max_weight, weights, values):
+    n = len(weights)
+    dp = [0] * (max_weight + 1)
+    for i in range(1, n + 1):
+        for j in range(max_weight, 0, -1):
+            if weights[i - 1] <= j:
+                dp[j] = max(dp[j], dp[j - weights[i - 1]] + values[i - 1])
+    return dp[max_weight]
+```
+
+```python
+if __name__ == '__main__':
+    weights = [10, 20, 30]
+    values = [60, 100, 120]
+    max_weight = 50
+    print(knapsack(max_weight, weights, values))
+```
+
+###### 输出价值最大时的方案
+
+```python
+def knapsack(max_weight, weights, values):
+    n = len(weights)
+    dp = [[0] * (max_weight + 1) for _ in range(n + 1)]
+    for i in range(1, n + 1):
+        for j in range(1, max_weight + 1):
+            dp[i][j] = dp[i - 1][j]
+            if weights[i - 1] <= j:
+                dp[i][j] = max(dp[i][j], dp[i - 1][j - weights[i - 1]] + values[i - 1])
+    j = max_weight
+    result = []
+    for i in range(n, 0, -1):
+        if dp[i][j] > dp[i - 1][j]:
+            result.append(i - 1)
+            j -= weights[i - 1]
+    result.reverse()
+    return result
+```
+
+```python
+if __name__ == '__main__':
+    weights = [2, 2, 6, 5, 4]
+    values = [6, 3, 5, 4, 6]
+    max_weight = 10
+    print(knapsack(max_weight, weights, values))
 ```
 
 ## 2. 经典题目
