增加一些经典题目

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -158,10 +158,32 @@
   - [2.102. 轮流取数先取者是否必胜](#2102-轮流取数先取者是否必胜)
   - [2.103. 区间调度问题](#2103-区间调度问题)
     - [2.103.1. 最多区间调度](#21031-最多区间调度)
-  - [2.104. 快速替换10亿条标题中的5万个敏感词](#2104-快速替换10亿条标题中的5万个敏感词)
-  - [2.105. 轮流取数的必胜策略](#2105-轮流取数的必胜策略)
-  - [2.106. 最大公约数（辗转相除法）](#2106-最大公约数辗转相除法)
-  - [2.107. 最小公倍数](#2107-最小公倍数)
+  - [2.104. 寻找数组中是否存在`nums[i]`和`nums[j]`差的绝对值最大为t，`i`和`j`差的绝对值最大为k](#2104-寻找数组中是否存在numsi和numsj差的绝对值最大为ti和j差的绝对值最大为k)
+  - [2.105. 猜数游戏，猜错需要付钱，求确保猜中的最小代价](#2105-猜数游戏猜错需要付钱求确保猜中的最小代价)
+  - [2.106. 寻找数组中是否存在`i < j < k`使得`ai < ak < aj`](#2106-寻找数组中是否存在i--j--k使得ai--ak--aj)
+  - [2.107. 矩阵上从某一点经过最多N次移动出界外的路径总数](#2107-矩阵上从某一点经过最多n次移动出界外的路径总数)
+  - [2.108. 每次操作删除一个字符，求使得两个字符串相同的最少操作次数](#2108-每次操作删除一个字符求使得两个字符串相同的最少操作次数)
+  - [2.109. 求字符串的（不同下标）回文字串的数目](#2109-求字符串的不同下标回文字串的数目)
+  - [2.110. 打印二叉树](#2110-打印二叉树)
+  - [2.111. 是否可以仅改变一个元素，使得数组为单调递增数组](#2111-是否可以仅改变一个元素使得数组为单调递增数组)
+  - [2.112. 仅调换一次一个数的两个数字，求最大值](#2112-仅调换一次一个数的两个数字求最大值)
+  - [2.113. 检查带有通配符的括号序列是否合法](#2113-检查带有通配符的括号序列是否合法)
+  - [2.114. 两个有序数组的中位数](#2114-两个有序数组的中位数)
+  - [2.115. 带有`.`和`*`的正则表达式匹配](#2115-带有和的正则表达式匹配)
+  - [2.116. 合并多个有序链表](#2116-合并多个有序链表)
+  - [2.117. 最长合法括号字串](#2117-最长合法括号字串)
+  - [2.118. 带有`?`和`*`的正则表达式匹配](#2118-带有和的正则表达式匹配)
+  - [2.119. 检查字符串是否是合法数字](#2119-检查字符串是否是合法数字)
+  - [2.120. 通过插入、删除和替换，最少需要多少次操作可以使得两个字符串相同](#2120-通过插入删除和替换最少需要多少次操作可以使得两个字符串相同)
+  - [2.121. 柱状图中的最大矩形](#2121-柱状图中的最大矩形)
+  - [2.122. 矩阵中由1组成的最大矩阵](#2122-矩阵中由1组成的最大矩阵)
+  - [2.123. 判断字符串是否由给定的两个字符串组合而成](#2123-判断字符串是否由给定的两个字符串组合而成)
+  - [2.124. 一个字符串有多少个子序列可以组成另一个字符串](#2124-一个字符串有多少个子序列可以组成另一个字符串)
+  - [2.125. 二叉树上最大（不需要经过根结点）路径和](#2125-二叉树上最大不需要经过根结点路径和)
+  - [2.126. 快速替换10亿条标题中的5万个敏感词](#2126-快速替换10亿条标题中的5万个敏感词)
+  - [2.127. 轮流取数的必胜策略](#2127-轮流取数的必胜策略)
+  - [2.128. 最大公约数（辗转相除法）](#2128-最大公约数辗转相除法)
+  - [2.129. 最小公倍数](#2129-最小公倍数)
 
 <!-- /TOC -->
 
@@ -4017,7 +4039,7 @@ def canIWin(self, maxChoosableInteger, desiredTotal):
 
 #### 2.103.1. 最多区间调度
 
-[Leetcode 452. Minimum Number of Arrows to Burst Balloons][leetcode_452]
+[Leetcode 633. Sum of Square Numbers][leetcode_633]
 
 ```python
 def maxNonoverlapIntervals(self, intervals):
@@ -4035,7 +4057,652 @@ def maxNonoverlapIntervals(self, intervals):
     return result
 ```
 
-### 2.104. 快速替换10亿条标题中的5万个敏感词
+### 2.104. 寻找数组中是否存在`nums[i]`和`nums[j]`差的绝对值最大为t，`i`和`j`差的绝对值最大为k
+
+[Leetcode 220. Contains Duplicate III][leetcode_220]
+
+```python
+def containsNearbyAlmostDuplicate(self, nums, k, t):
+    """
+    :type nums: List[int]
+    :type k: int
+    :type t: int
+    :rtype: bool
+    """
+    if k < 1 or t < 0:
+        return False
+    buckets = {}
+    for i, num in enumerate(nums):
+        adjusted_num = num + 0x80000000
+        bucket = adjusted_num // (t + 1)
+        if bucket in buckets \
+                or (bucket - 1 in buckets and abs(adjusted_num - buckets[bucket - 1]) <= t) \
+                or (bucket + 1 in buckets and abs(adjusted_num - buckets[bucket + 1]) <= t):
+            return True
+        buckets[bucket] = adjusted_num
+        if i >= k:
+            del buckets[(nums[i - k] + 0x80000000) // (t + 1)]
+    return False
+```
+
+### 2.105. 猜数游戏，猜错需要付钱，求确保猜中的最小代价
+
+[Leetcode 375. Guess Number Higher or Lower II][leetcode_375]
+
+```python
+def getMoneyAmount(self, n):
+    """
+    :type n: int
+    :rtype: int
+    """
+    def get_money(start, end, memory):
+        if start >= end:
+            return 0
+        if memory[start][end] != 0:
+            return memory[start][end]
+        result = sys.maxsize
+        for i in range(start, end + 1):
+            current = i + max(get_money(start, i - 1, memory), get_money(i + 1, end, memory))
+            result = min(result, current)
+        memory[start][end] = result
+        return result
+
+    memory = [[0] * (n + 1) for _ in range(n + 1)]
+    return get_money(0, n, memory)
+```
+
+### 2.106. 寻找数组中是否存在`i < j < k`使得`ai < ak < aj`
+
+[Leetcode 456. 132 Pattern][leetcode_456]
+
+```python
+def find132pattern(self, nums):
+    """
+    :type nums: List[int]
+    :rtype: bool
+    """
+    if len(nums) < 3:
+        return False
+    stack = []
+    for num in nums:
+        if not stack or stack[-1][0] > num:
+            stack.append((num, num))
+        elif stack[-1][0] < num:
+            if stack[-1][1] > num:
+                return True
+            the_min = stack[-1][0]
+            stack.pop()
+            while stack and stack[-1][1] <= num:
+                stack.pop()
+            if stack and stack[-1][0] < num:
+                return True
+            stack.append((the_min, num))
+    return False
+```
+
+### 2.107. 矩阵上从某一点经过最多N次移动出界外的路径总数
+
+[Leetcode 576. Out of Boundary Paths][leetcode_576]
+
+```python
+def findPaths(self, m, n, N, i, j):
+    """
+    :type m: int
+    :type n: int
+    :type N: int
+    :type i: int
+    :type j: int
+    :rtype: int
+    """
+    dp = [[[0] * (n) for _ in range(m)] for _ in range(N + 1)]
+    moves = ((-1, 0), (1, 0), (0, -1), (0, 1))
+    for k in range(1, N + 1):
+        for a in range(m):
+            for b in range(n):
+                for move in moves:
+                    row = a + move[0]
+                    col = b + move[1]
+                    if row == -1 or col == -1 or row == m or col == n:
+                        dp[k][a][b] += 1
+                    else:
+                        dp[k][a][b] += dp[k - 1][row][col]
+                        dp[k][a][b] %= 1000000007
+    return dp[N][i][j]
+```
+
+### 2.108. 每次操作删除一个字符，求使得两个字符串相同的最少操作次数
+
+[Leetcode 583. Delete Operation for Two Strings][leetcode_583]
+
+```python
+def minDistance(self, word1, word2):
+    """
+    :type word1: str
+    :type word2: str
+    :rtype: int
+    """
+    l1 = len(word1)
+    l2 = len(word2)
+    dp = [[0] * (l2 + 1) for _ in range(l1 + 1)]
+    for i in range(1, l1 + 1):
+        for j in range(1, l2 + 1):
+            if word1[i - 1] == word2[j - 1]:
+                dp[i][j] = dp[i - 1][j - 1] + 1
+            else:
+                dp[i][j] = max(dp[i][j - 1], dp[i - 1][j])
+    max_length = dp[l1][l2]
+    return l1 - max_length + l2 - max_length
+```
+
+### 2.109. 求字符串的（不同下标）回文字串的数目
+
+[Leetcode 647. Palindromic Substrings][leetcode_647]
+
+```python
+def countSubstrings(self, s):
+    """
+    :type s: str
+    :rtype: int
+    """
+    self.result = 0
+
+    def count(s, left, right):
+        while left >= 0 and right < len(s) and s[left] == s[right]:
+            self.result += 1
+            left -= 1
+            right += 1
+
+    for i in range(len(s)):
+        count(s, i, i)
+        count(s, i, i + 1)
+    return self.result
+```
+
+### 2.110. 打印二叉树
+
+[Leetcode 655. Print Binary Tree][leetcode_655]
+
+```python
+def printTree(self, root):
+    """
+    :type root: TreeNode
+    :rtype: List[List[str]]
+    """
+    def get_depth(root):
+        if not root:
+            return 0
+        return max(get_depth(root.left), get_depth(root.right)) + 1
+
+    depth = get_depth(root)
+    self.result = [[''] * (2 ** depth - 1) for _ in range(depth)]
+
+    def print_tree(root, row, depth, col):
+        self.result[row][col] = str(root.val)
+        row += 1
+        if root.left:
+            print_tree(root.left, row, depth, col - 2 ** (depth - row - 1))
+        if root.right:
+            print_tree(root.right, row, depth, col + 2 ** (depth - row - 1))
+
+    print_tree(root, 0, depth, 2 ** (depth - 1) - 1)
+    return self.result
+```
+
+### 2.111. 是否可以仅改变一个元素，使得数组为单调递增数组
+
+[Leetcode 665. Non-decreasing Array][leetcode_665]
+
+```python
+def checkPossibility(self, nums):
+    """
+    :type nums: List[int]
+    :rtype: bool
+    """
+    is_modified = False
+    for i in range(1, len(nums)):
+        if nums[i - 1] > nums[i]:
+            if is_modified:
+                return False
+            is_modified = True
+            if i < 2 or nums[i - 2] <= nums[i]:
+                nums[i - 1] = nums[i]
+            else:
+                nums[i] = nums[i - 1]
+    return True
+```
+
+### 2.112. 仅调换一次一个数的两个数字，求最大值
+
+[Leetcode 670. Maximum Swap][leetcode_670]
+
+```python
+def maximumSwap(self, num):
+    """
+    :type num: int
+    :rtype: int
+    """
+    num_str = list(str(num))
+    last_index = {}
+    for i, item in enumerate(num_str):
+        last_index[item] = i
+    for i, item in enumerate(num_str):
+        for digit in '987654321':
+            if digit > item and digit in last_index and last_index[digit] > i:
+                num_str[i], num_str[last_index[digit]] = num_str[last_index[digit]], num_str[i]
+                return int(''.join(num_str))
+    return num
+```
+
+### 2.113. 检查带有通配符的括号序列是否合法
+
+[Leetcode 678. Valid Parenthesis String][leetcode_678]
+
+```python
+def checkValidString(self, s):
+    """
+    :type s: str
+    :rtype: bool
+    """
+    min_close = 0
+    max_close = 0
+    for letter in s:
+        if letter == '(':
+            min_close += 1
+            max_close += 1
+        elif letter == ')':
+            if min_close > 0:
+                min_close -= 1
+            max_close -= 1
+            if max_close < 0:
+                return False
+        else:
+            if min_close > 0:
+                min_close -= 1
+            max_close += 1
+    return min_close == 0
+```
+
+### 2.114. 两个有序数组的中位数
+
+[Leetcode 4. Median of Two Sorted Arrays][leetcode_4]
+
+```python
+def findMedianSortedArrays(self, nums1, nums2):
+    """
+    :type nums1: List[int]
+    :type nums2: List[int]
+    :rtype: float
+    """
+    if len(nums1) > len(nums2):
+        return self.findMedianSortedArrays(nums2, nums1)
+    short_length = len(nums1)
+    long_length = len(nums2)
+    short_left = 0
+    short_right = len(nums1)
+    while short_left <= short_right:
+        short_mid = (short_left + short_right) // 2
+        long_mid = (short_length + long_length + 1) // 2 - short_mid
+        if short_mid < short_length and nums1[short_mid] < nums2[long_mid - 1]:
+            short_left = short_mid + 1
+        elif short_mid > 0 and nums1[short_mid - 1] > nums2[long_mid]:
+            short_right = short_mid - 1
+        else:
+            max_left = None
+            if short_mid == 0:
+                max_left = nums2[long_mid - 1]
+            elif long_mid == 0:
+                max_left = nums1[short_mid - 1]
+            else:
+                max_left = max(nums1[short_mid - 1], nums2[long_mid - 1])
+            if (short_length + long_length) % 2:
+                return max_left
+            min_right = None
+            if short_mid == short_length:
+                min_right = nums2[long_mid]
+            elif long_mid == long_length:
+                min_right = nums1[short_mid]
+            else:
+                min_right = min(nums1[short_mid], nums2[long_mid])
+            return (max_left + min_right) / 2.0
+```
+
+### 2.115. 带有`.`和`*`的正则表达式匹配
+
+[Leetcode 4. Median of Two Sorted Arrays][leetcode_4]
+
+```python
+def isMatch(self, s, p):
+    """
+    :type s: str
+    :type p: str
+    :rtype: bool
+    """
+    length_s = len(s)
+    length_p = len(p)
+    dp = [[False] * (length_p + 1) for i in range(length_s + 1)]
+    dp[0][0] = True
+    for i in range(1, length_s + 1):
+        dp[i][0] = False
+    for j in range(1, length_p + 1):
+        dp[0][j] = j > 1 and p[j - 1] == '*' and dp[0][j - 2]
+    for i in range(1, length_s + 1):
+        for j in range(1, length_p + 1):
+            if p[j - 1] == '*':
+                dp[i][j] = dp[i][j - 2] or ((p[j - 2] == s[i - 1] or p[j - 2] == '.') and dp[i - 1][j])
+            else:
+                dp[i][j] = dp[i - 1][j - 1] and (p[j - 1] == s[i - 1] or p[j - 1] == '.')
+    return dp[length_s][length_p]
+```
+
+### 2.116. 合并多个有序链表
+
+[Leetcode 23. Merge k Sorted Lists][leetcode_23]
+
+```python
+# Definition for singly-linked list.
+# class ListNode(object):
+#     def __init__(self, x):
+#         self.val = x
+#         self.next = None
+
+def mergeKLists(self, lists):
+    """
+    :type lists: List[ListNode]
+    :rtype: ListNode
+    """
+    def partition(lists, start, end):
+        if start == end:
+            return lists[start]
+        if start < end:
+            mid = (start + end) // 2
+            list_1 = partition(lists, start, mid)
+            list_2 = partition(lists, mid + 1, end)
+            return merge(list_1, list_2)
+        return None
+
+    def merge(list_1, list_2):
+        fake_head = ListNode(0)
+        current = fake_head
+        while list_1 and list_2:
+            if list_1.val < list_2.val:
+                current.next = list_1
+                list_1 = list_1.next
+            else:
+                current.next = list_2
+                list_2 = list_2.next
+            current = current.next
+        current.next = list_1 if list_1 else list_2
+        return fake_head.next
+
+    return partition(lists, 0, len(lists) - 1)
+```
+
+### 2.117. 最长合法括号字串
+
+[Leetcode 32. Longest Valid Parentheses][leetcode_32]
+
+```python
+def longestValidParentheses(self, s):
+    """
+    :type s: str
+    :rtype: int
+    """
+    left = 0
+    right = 0
+    result = 0
+    for item in s:
+        if item == '(':
+            left += 1
+        else:
+            right += 1
+        if left == right:
+            result = max(result, left + right)
+        elif left < right:
+            left = 0
+            right = 0
+    left = 0
+    right = 0
+    for item in reversed(s):
+        if item == '(':
+            left += 1
+        else:
+            right += 1
+        if left == right:
+            result = max(result, left + right)
+        elif left > right:
+            left = 0
+            right = 0
+    return result
+```
+
+### 2.118. 带有`?`和`*`的正则表达式匹配
+
+[Leetcode 44. Wildcard Matching][leetcode_44]
+
+```python
+def isMatch(self, s, p):
+    """
+    :type s: str
+    :type p: str
+    :rtype: bool
+    """
+    length_s = len(s)
+    length_p = len(p)
+    dp = [[False] * (length_p + 1) for i in range(length_s + 1)]
+    dp[0][0] = True
+    for j in range(1, length_p + 1):
+        dp[0][j] = dp[0][j - 1] and p[j - 1] == '*'
+    for i in range(1, length_s + 1):
+        for j in range(1, length_p + 1):
+            if p[j - 1] == '*':
+                dp[i][j] = dp[i - 1][j] or dp[i][j - 1]
+            else:
+                dp[i][j] = dp[i - 1][j - 1] and (p[j - 1] == s[i - 1] or p[j - 1] == '?')
+    return dp[length_s][length_p]
+```
+
+### 2.119. 检查字符串是否是合法数字
+
+[Leetcode 65. Valid Number][leetcode_65]
+
+```python
+def isNumber(self, s):
+    """
+    :type s: str
+    :rtype: bool
+    """
+    s = s.strip()
+    has_dot = False
+    has_e = False
+    has_number = False
+    has_number_after_e = False
+    for i, letter in enumerate(s):
+        if letter in '0123456789':
+            has_number = True
+            if has_e:
+                has_number_after_e = True
+        elif letter == '.':
+            if has_dot or has_e:
+                return False
+            has_dot = True
+        elif letter == 'e':
+            if has_e or not has_number:
+                return False
+            has_e = True
+        elif letter in '+-':
+            if i != 0 and s[i - 1] != 'e':
+                return False
+        else:
+            return False
+    return (not has_e ^ has_number_after_e) and has_number
+```
+
+### 2.120. 通过插入、删除和替换，最少需要多少次操作可以使得两个字符串相同
+
+[Leetcode 72. Edit Distance][leetcode_72]
+
+```python
+def minDistance(self, word1, word2):
+    """
+    :type word1: str
+    :type word2: str
+    :rtype: int
+    """
+    m = len(word1)
+    n = len(word2)
+    dp = [[0] * (n + 1) for i in range(m + 1)]
+    for i in range(m + 1):
+        dp[i][0] = i
+    for j in range(n + 1):
+        dp[0][j] = j
+    for i in range(1, m + 1):
+        for j in range(1, n + 1):
+            if word1[i - 1] == word2[j - 1]:
+                dp[i][j] = dp[i - 1][j - 1]
+            else:
+                dp[i][j] = min(dp[i - 1][j - 1], dp[i][j - 1], dp[i - 1][j]) + 1
+    return dp[m][n]
+```
+
+### 2.121. 柱状图中的最大矩形
+
+[Leetcode 84. Largest Rectangle in Histogram][leetcode_84]
+
+```python
+def largestRectangleArea(self, heights):
+    """
+    :type heights: List[int]
+    :rtype: int
+    """
+    stack = []
+    i = 0
+    result = 0
+    while i < len(heights):
+        while stack and heights[i] < heights[stack[-1]]:
+            index = stack.pop()
+            current = heights[index] * (i - (stack[-1] if stack else -1) - 1)
+            result = max(result, current)
+        stack.append(i)
+        i += 1
+    while stack:
+        index = stack.pop()
+        current = heights[index] * (i - (stack[-1] if stack else -1) - 1)
+        result = max(result, current)
+    return result
+```
+
+### 2.122. 矩阵中由1组成的最大矩阵
+
+[Leetcode 85. Maximal Rectangle][leetcode_85]
+
+```python
+def maximalRectangle(self, matrix):
+    """
+    :type matrix: List[List[str]]
+    :rtype: int
+    """
+    if not matrix:
+        return 0
+    heights = [0] * len(matrix[0])
+    result = 0
+    for row in matrix:
+        for i, item in enumerate(row):
+            if item == '1':
+                heights[i] += 1
+            else:
+                heights[i] = 0
+        stack = []
+        i = 0
+        while i < len(heights):
+            while stack and heights[i] < heights[stack[-1]]:
+                index = stack.pop()
+                current = heights[index] * (i - (stack[-1] if stack else -1) - 1)
+                result = max(result, current)
+            stack.append(i)
+            i += 1
+        while stack:
+            index = stack.pop()
+            current = heights[index] * (i - (stack[-1] if stack else -1) - 1)
+            result = max(result, current)
+    return result
+```
+
+### 2.123. 判断字符串是否由给定的两个字符串组合而成
+
+[Leetcode 97. Interleaving String][leetcode_97]
+
+```python
+def isInterleave(self, s1, s2, s3):
+    """
+    :type s1: str
+    :type s2: str
+    :type s3: str
+    :rtype: bool
+    """
+    length_1 = len(s1) + 1
+    length_2 = len(s2) + 1
+    if len(s1) + len(s2) != len(s3):
+        return False
+    dp = [[False] * length_2 for i in range(length_1)]
+    dp[0][0] = True
+    for i in range(1, length_1):
+        dp[i][0] = dp[i - 1][0] and s1[i - 1] == s3[i - 1]
+    for j in range(1, length_2):
+        dp[0][j] = dp[0][j - 1] and s2[j - 1] == s3[j - 1]
+    for i in range(1, length_1):
+        for j in range(1, length_2):
+            dp[i][j] = (dp[i - 1][j] and s1[i - 1] == s3[i + j - 1]) or (
+                dp[i][j - 1] and s2[j - 1] == s3[i + j - 1])
+    return dp[length_1 - 1][length_2 - 1]
+```
+
+### 2.124. 一个字符串有多少个子序列可以组成另一个字符串
+
+[Leetcode 115. Distinct Subsequences][leetcode_115]
+
+```python
+def numDistinct(self, s, t):
+    """
+    :type s: str
+    :type t: str
+    :rtype: int
+    """
+    dp = [[None] * (len(s) + 1) for i in range(len(t) + 1)]
+    dp[0] = [1] * (len(s) + 1)
+    for i in range(1, len(t) + 1):
+        dp[i][0] = 0
+    for i in range(1, len(t) + 1):
+        for j in range(1, len(s) + 1):
+            dp[i][j] = dp[i][j - 1]
+            if t[i - 1] == s[j - 1]:
+                dp[i][j] += dp[i - 1][j - 1]
+    return dp[len(t)][len(s)]
+```
+
+### 2.125. 二叉树上最大（不需要经过根结点）路径和
+
+[Leetcode 124. Binary Tree Maximum Path Sum][leetcode_124]
+
+```python
+def maxPathSum(self, root):
+    """
+    :type root: TreeNode
+    :rtype: int
+    """
+    def path_sum(root, result):
+        if not root:
+            return (0, result)
+        left, result = path_sum(root.left, result)
+        left = max(0, left)
+        right, result = path_sum(root.right, result)
+        right = max(0, right)
+        result = max(result, left + right + root.val)
+        return max(left, right) + root.val, result
+
+    return path_sum(root, -sys.maxsize)[1]
+```
+
+### 2.126. 快速替换10亿条标题中的5万个敏感词
 
 Aho-Corasick算法（AC自动机）：
 
@@ -4045,13 +4712,13 @@ Aho-Corasick算法（AC自动机）：
 
 参考：[AC自动机算法详解 - 极限定律 - C++博客][aho_corasick_algorithm]
 
-### 2.105. 轮流取数的必胜策略
+### 2.127. 轮流取数的必胜策略
 
 问题描述：有2N个自然数，甲乙两人轮流取。一人一次取一个，而且只能取头尾两个数中的一个，取过的数划去，直到2N个数取完，取得的数的总和大的人获胜。那么，先取的人是否有必胜策略？
 
 解决方法：先取的人只要取了奇数位上的数，就把偶数位的数留给后取的人，而且只要坚持取奇数位上的数，就一直会把偶数位上的数留给后取的人。这样就会取走所有奇数位上的数。（这种方法同样可使先取的人把所有偶数位上的数取走）所以，先取的人只要一开始算出是所有偶数位上的数总和大，还是所有奇数位上的数总和大，就一定会胜。
 
-### 2.106. 最大公约数（辗转相除法）
+### 2.128. 最大公约数（辗转相除法）
 
 ```python
 def gcd(a, b):
@@ -4060,7 +4727,7 @@ def gcd(a, b):
     return a
 ```
 
-### 2.107. 最小公倍数
+### 2.129. 最小公倍数
 
 `(a * b)/gcd(a, b)`
 
@@ -4260,4 +4927,44 @@ def gcd(a, b):
 
 [leetcode_343]: https://leetcode.com/problems/integer-break/description/
 
-[leetcode_452]: https://leetcode.com/problems/minimum-number-of-arrows-to-burst-balloons/description/
+[leetcode_633]: https://leetcode.com/problems/sum-of-square-numbers/description/
+
+[leetcode_220]: https://leetcode.com/problems/contains-duplicate-iii/description/
+
+[leetcode_375]: https://leetcode.com/problems/guess-number-higher-or-lower-ii/description/
+
+[leetcode_456]: https://leetcode.com/problems/132-pattern/description/
+
+[leetcode_576]: https://leetcode.com/problems/out-of-boundary-paths/description/
+
+[leetcode_583]: https://leetcode.com/problems/delete-operation-for-two-strings/description/
+
+[leetcode_647]: https://leetcode.com/problems/palindromic-substrings/description/
+
+[leetcode_655]: https://leetcode.com/problems/print-binary-tree/description/
+
+[leetcode_665]: https://leetcode.com/problems/non-decreasing-array/description/
+
+[leetcode_670]: https://leetcode.com/problems/maximum-swap/description/
+
+[leetcode_678]: https://leetcode.com/problems/valid-parenthesis-string/description/
+
+[leetcode_4]: https://leetcode.com/problems/median-of-two-sorted-arrays/description/
+
+[leetcode_23]: https://leetcode.com/problems/merge-k-sorted-lists/description/
+
+[leetcode_32]: https://leetcode.com/problems/longest-valid-parentheses/description/
+
+[leetcode_44]: https://leetcode.com/problems/wildcard-matching/description/
+
+[leetcode_65]: https://leetcode.com/problems/valid-number/description/
+
+[leetcode_72]: https://leetcode.com/problems/edit-distance/description/
+
+[leetcode_85]: https://leetcode.com/problems/maximal-rectangle/description/
+
+[leetcode_97]: https://leetcode.com/problems/interleaving-string/description/
+
+[leetcode_115]: https://leetcode.com/problems/distinct-subsequences/description/
+
+[leetcode_124]: https://leetcode.com/problems/binary-tree-maximum-path-sum/description/
